--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-2 [匈牙利总理欧尔班在俄乌开战后首访乌克兰，与泽连斯基会谈](/articles/voa/1014417.md)
+
 7-2 [鹬蚌相争，渔翁得利：南太岛国凭借其战略位置获利多多](/articles/voa/1014418.md)
 
 7-2 [制造业调查显示6月份中国经济虽增长，但速度缓慢](/articles/voa/1014419.md)
@@ -598,6 +600,4 @@
 6-20 [日本与新西兰达成情报共享协议以应对地区安全威胁](/articles/voa/1014715.md)
 
 6-20 [专家：普京的访问使越南处于“困难境地”且“没有突破”](/articles/voa/1014716.md)
-
-6-20 [乌克兰称其能源设施在俄军袭击中受损](/articles/voa/1014717.md)
 
