--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-3 [中菲南中国海冲突再升级 专家:双方皆不愿意挑起大规模战争](/articles/voa/1014413.md)
+
+7-3 [仇日情绪升温 怕失控中国出手打击极端言论](/articles/voa/1014414.md)
+
 7-2 [梵蒂冈呼吁菲中和平解决纠纷，马尼拉：维护主权“绝不留情”](/articles/voa/1014415.md)
 
 7-2 [印度总理莫迪将缺席上合组织峰会，由外长代表出席](/articles/voa/1014416.md)
@@ -596,8 +600,4 @@
 6-20 [菲律宾军方公布视频，指责中国海警在南中国海的行为是“赤裸裸的侵略”](/articles/voa/1014711.md)
 
 6-20 [朝鲜称与俄罗斯的条约提供全面性共同防御](/articles/voa/1014712.md)
-
-6-20 [普京访问越南欲深化莫斯科与河内关系](/articles/voa/1014713.md)
-
-6-20 [秘鲁的平衡之举—钱凯港项目引发中美博弈](/articles/voa/1014714.md)
 
