--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [联合国：以色列命令撤离汗尤尼斯涉及几万人](/articles/voa/1014406.md)
+
 7-3 [纽约法官推迟对特朗普的量刑宣判，检方不反对延迟](/articles/voa/1014407.md)
 
 7-3 [菲律宾和中国同意“缓和”南中国海的紧张局势](/articles/voa/1014408.md)
@@ -598,6 +600,4 @@
 6-20 [普京访越签署一系列合作协议，河内试图在地缘政治敌对国之间施展平衡术](/articles/voa/1014704.md)
 
 6-20 [丹麦拒庇护刘栋玲或被遣返中国，拆墙运动濒临瓦解](/articles/voa/1014705.md)
-
-6-20 [中国南方遭暴雨袭击，江河湖库水位暴涨恐酿更多旱涝灾害](/articles/voa/1014706.md)
 
