--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-3 [美国会两党议员警告：中共反复用同样伎俩在各关键行业夺得主导地位 美国不能袖手旁观](/articles/voa/1014401.md)
+
+7-3 [被悬赏通缉的流亡香港活动人士饱受焦虑和恐惧之苦](/articles/voa/1014402.md)
+
 7-3 [印度北部发生人群踩踏事件，一百多人丧生](/articles/voa/1014403.md)
 
 7-3 [台湾呼吁中国立即释放在金门外海遭中国海警登检扣押的台湾渔船及船员](/articles/voa/1014404.md)
@@ -596,8 +600,4 @@
 6-21 [美国对以色列有关华盛顿推迟交付武器的批评深感失望](/articles/voa/1014699.md)
 
 6-21 [世界难民日：中国走线客的希望、无奈与担忧](/articles/voa/1014700.md)
-
-6-21 [韩国严厉谴责俄朝战略条约，考虑向乌克兰提供武器](/articles/voa/1014701.md)
-
-6-21 [中印民航客机直航中断四年后，新德里仍拒绝北京复航呼吁](/articles/voa/1014702.md)
 
