--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-3 [中國懲治「台獨」22條：對台人影響幾何？](/articles/dw/1025017.md)
+
 7-2 [首尔：朝鲜国家电视台以俄罗斯卫星替代中国卫星](/articles/dw/1025018.md)
 
 7-2 [挪威称逮捕一本国公民 涉嫌为中国从事间谍活动](/articles/dw/1025019.md)
@@ -598,6 +600,4 @@
 6-7 [他们在德国公开悼念六四](/articles/dw/1025315.md)
 
 6-7 [香港行为艺术家街头手画“八九六四“被捕](/articles/dw/1025316.md)
-
-6-7 [英國法官因政治因素請辭香港終審法院職務](/articles/dw/1025317.md)
 
