--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [移民英国的香港人怎样看不同政党和大选？](/articles/voa/1014396.md)
+
 7-3 [美国最高法院的裁决搅乱了特朗普面临的法律诉讼](/articles/voa/1014397.md)
 
 7-3 [卫星图像显示中国正在古巴扩张间谍基地](/articles/voa/1014398.md)
@@ -598,6 +600,4 @@
 6-21 [耶伦：对华新关税是“高度战略性的” 拒绝让美企因“中国协调采取的倾销措施”而破产](/articles/voa/1014694.md)
 
 6-21 [中国是否破坏了乌克兰和平峰会？](/articles/voa/1014695.md)
-
-6-21 [人权组织联署呼吁联合国就新疆报告做出更新并采取行动](/articles/voa/1014696.md)
 
