--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-3 [金融时报：欧盟正筹划对Temu和希音上的廉价中国商品征收关税](/articles/voa/1014394.md)
+
+7-3 [民主党人对拜登能否在2024年连任的质疑之声越来越高](/articles/voa/1014395.md)
+
 7-3 [移民英国的香港人怎样看不同政党和大选？](/articles/voa/1014396.md)
 
 7-3 [美国最高法院的裁决搅乱了特朗普面临的法律诉讼](/articles/voa/1014397.md)
@@ -596,8 +600,4 @@
 6-21 [救援物资重新通过美国建造的临时码头进入加沙](/articles/voa/1014692.md)
 
 6-21 [习近平的军队政治整训: 清除异己、强化军权](/articles/voa/1014693.md)
-
-6-21 [耶伦：对华新关税是“高度战略性的” 拒绝让美企因“中国协调采取的倾销措施”而破产](/articles/voa/1014694.md)
-
-6-21 [中国是否破坏了乌克兰和平峰会？](/articles/voa/1014695.md)
 
