--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-3 [意大利总理梅洛尼将访华：既要又要的平衡之旅](/articles/dw/1025014.md)
+
 7-3 [智庫：古巴新雷達站 恐成中國監視美國工具](/articles/dw/1025015.md)
 
 7-3 [流亡藏人用美食捍卫传统西藏文化](/articles/dw/1025016.md)
@@ -598,6 +600,4 @@
 6-7 [1342万高考生创纪录 未来就业或仍是难题](/articles/dw/1025312.md)
 
 6-7 [瑞士总统谈峰会：实现和平需要双方坐在谈判桌前](/articles/dw/1025313.md)
-
-6-7 [客座评论：为什么中国应该多消费？](/articles/dw/1025314.md)
 
