--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [印度哈特拉斯踩踏事件造成至少121人死亡，大部分是妇女](/articles/voa/1014393.md)
+
 7-3 [金融时报：欧盟正筹划对Temu和希音上的廉价中国商品征收关税](/articles/voa/1014394.md)
 
 7-3 [民主党人对拜登能否在2024年连任的质疑之声越来越高](/articles/voa/1014395.md)
@@ -598,6 +600,4 @@
 6-21 [美国寻求阻止以色列与真主党之间的军事升级](/articles/voa/1014691.md)
 
 6-21 [救援物资重新通过美国建造的临时码头进入加沙](/articles/voa/1014692.md)
-
-6-21 [习近平的军队政治整训: 清除异己、强化军权](/articles/voa/1014693.md)
 
