--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-3 [希音是美国公司还是中国公司？](/articles/voa/1014389.md)
+
+7-3 [国安新规生效，入境中国恐遭查验手机电脑](/articles/voa/1014390.md)
+
 7-3 [财新PMI: 中国服务业活动增速降至八个月低点](/articles/voa/1014391.md)
 
 7-3 [韩议员：朝鲜“垃圾气球”干扰首尔航班，影响逾万旅客](/articles/voa/1014392.md)
@@ -596,8 +600,4 @@
 6-21 [美中罕见半官方核对话，中国据称承诺不对台湾动用核武器](/articles/voa/1014687.md)
 
 6-21 [特朗普提议为外国毕业生自动发放绿卡，意外转变移民立场](/articles/voa/1014688.md)
-
-6-21 [中国总理李强结束亚太魅力攻势之行，结果好坏参半](/articles/voa/1014689.md)
-
-6-21 [美国要求越南支持乌克兰的主权和领土完整](/articles/voa/1014690.md)
 
