--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-3 [冰川思享号｜营养餐这块“唐僧肉”，真在孩子们的餐桌上出现过吗](/articles/cdt/339169.md)
+
 7-3 [突围先生｜就业率崩的越来越离谱了](/articles/cdt/339171.md)
 
 7-3 [维舟｜自我封闭才是真正的危机](/articles/cdt/339174.md)
@@ -598,6 +600,4 @@
 5-26 [城市的地得｜不要跳桥：城市中的新悲伤](/articles/cdt/340323.md)
 
 5-26 [每日一语 2024.5.25](/articles/cdt/340326.md)
-
-5-26 [盐族｜专制统治是如何统一极端异化的思想而欺诈人民的？](/articles/cdt/340330.md)
 
