--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [中国海警扣押违规台湾渔船，分析:中方未来恐软硬兼施，强化对台法律战论述](/articles/voa/1014387.md)
+
 7-3 [香港主权移交27周年 民调指过半港人对前途无信心 免于恐惧自由评分大跌](/articles/voa/1014388.md)
 
 7-3 [希音是美国公司还是中国公司？](/articles/voa/1014389.md)
@@ -598,6 +600,4 @@
 6-21 [朝鲜士兵本月第三度越过边界，韩国鸣枪示警](/articles/voa/1014685.md)
 
 6-21 [澳大利亚寻求恢复澳中防长年度对话 以减少军事误判避免冲突](/articles/voa/1014686.md)
-
-6-21 [美中罕见半官方核对话，中国据称承诺不对台湾动用核武器](/articles/voa/1014687.md)
 
