--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-4 [中欧电动车关税谈判进入最后一刻，中国厂商面临重击](/articles/voa/1014383.md)
+
 7-4 [上合峰会上演权力游戏：习近平的政治虚荣和普京的战略工具](/articles/voa/1014384.md)
 
 7-3 [中国极端天气加剧，长江中下游水位暴涨令东部面临洪灾](/articles/voa/1014385.md)
@@ -598,6 +600,4 @@
 6-21 [中国核武库扩大，全球核竞赛难以避免？](/articles/voa/1014681.md)
 
 6-21 [世界媒体看中国 - 房市行情再下探](/articles/voa/1014682.md)
-
-6-21 [韩国召见俄罗斯大使，抗议朝俄新防御条约](/articles/voa/1014683.md)
 
