--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-4 [NASA：“百年不遇”的新星爆发随时可能到来](/articles/voa/1014380.md)
+
 7-4 [印度能在莫迪的第三个任期内解决与中国的边界问题吗？](/articles/voa/1014381.md)
 
 7-4 [加沙人上路逃亡,以色列空袭加沙中部与北部](/articles/voa/1014382.md)
@@ -598,6 +600,4 @@
 6-22 [中国新规“惩治台独”罪可判死，台湾专家:威吓效果有限](/articles/voa/1014678.md)
 
 6-21 [日本宣布对帮助俄罗斯的中港企业进行制裁](/articles/voa/1014679.md)
-
-6-21 [越南表示愿与菲律宾就双方南中国海大陆架主张重叠问题展开对话](/articles/voa/1014680.md)
 
