--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-4 [中国海警扣押台湾渔船及五名船员](/articles/nyt/1042617.md)
+
 7-3 [拜登真的越来越“老糊涂”了？](/articles/nyt/1042618.md)
 
 7-3 [拜登能送给美国的最好的礼物：退选](/articles/nyt/1042619.md)
@@ -598,6 +600,4 @@
 3-27 [不要对香港发生的一切视而不见](/articles/nyt/1042915.md)
 
 3-27 [从华为到农夫山泉：中国民族主义者为何向它们“开炮”](/articles/nyt/1042916.md)
-
-3-26 [中国年轻人为何爱上“上班恶心穿搭”](/articles/nyt/1042917.md)
 
