--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-4 [中国全面审查游泳禁药丑闻，为何沉默而非反击？](/articles/nyt/1042614.md)
+
 7-4 [美国的领导人危机是给习近平和普京的大礼](/articles/nyt/1042615.md)
 
 7-4 [美国自2018年以来首次通过大型包机遣返中国移民](/articles/nyt/1042616.md)
@@ -598,6 +600,4 @@
 3-27 [广州及巴尔的摩两起货船撞击大桥事故引发反思](/articles/nyt/1042912.md)
 
 3-27 [五名中国工人在巴基斯坦遭自杀式袭击死亡](/articles/nyt/1042913.md)
-
-3-27 [网飞如何改编《三体》：视效一流，人物成败笔](/articles/nyt/1042914.md)
 
