--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-4 [风慢慢｜美军偷叙利亚小麦这个新闻，戳中了我的笑点](/articles/cdt/339159.md)
+
 7-4 [每日一语 2024.7.3](/articles/cdt/339162.md)
 
 7-4 [这是一个令人疑惑的星球｜河南农村旱灾情况考察报告](/articles/cdt/339164.md)
@@ -598,6 +600,4 @@
 5-27 [亮见｜做刘强东的兄弟，您也配？](/articles/cdt/340304.md)
 
 5-27 [端传媒｜下岗与工运、牢狱与监视、疾病与衰老——重返工运领袖孟晗的前半生（节选）](/articles/cdt/340308.md)
-
-5-27 [维舟｜男性能理解女性吗？](/articles/cdt/340310.md)
 
