--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-4 [刚果民兵组织袭击金矿 造成至少4名中国人死亡](/articles/dw/1025002.md)
+
 7-4 [聯合國報告：中國生成式AI專利申請居冠](/articles/dw/1025003.md)
 
 7-3 [客座评论：习近平念政治紧箍咒能实现强军梦？](/articles/dw/1025004.md)
@@ -598,6 +600,4 @@
 6-8 [嫦娥六号完成采样任务 月球背面留“字”引热议](/articles/dw/1025300.md)
 
 6-8 [美国热门APP多次发布假新闻 中国背景引发关注](/articles/dw/1025301.md)
-
-6-8 [白宫高官：威慑俄中等对手 美或扩大核武库](/articles/dw/1025302.md)
 
