--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-4 [肖尔茨给出保证：德国不会成为俄乌战争方](/articles/dw/1024999.md)
+
+7-4 [忧心安全 德政府喊停中企收购燃气轮机企业](/articles/dw/1025000.md)
+
+7-4 [欧洲杯疯足球: 德国的球迷文化](/articles/dw/1025001.md)
+
 7-4 [刚果民兵组织袭击金矿 造成至少4名中国人死亡](/articles/dw/1025002.md)
 
 7-4 [聯合國報告：中國生成式AI專利申請居冠](/articles/dw/1025003.md)
@@ -594,10 +600,4 @@
 6-8 [曾拍摄「地球升起」照 阿波罗8号宇航员坠机身亡](/articles/dw/1025297.md)
 
 6-8 [马克龙隆重欢迎拜登进行国事访问](/articles/dw/1025298.md)
-
-6-8 [客座评论：大选后的极右翼党是否能成为北京的助手？](/articles/dw/1025299.md)
-
-6-8 [嫦娥六号完成采样任务 月球背面留“字”引热议](/articles/dw/1025300.md)
-
-6-8 [美国热门APP多次发布假新闻 中国背景引发关注](/articles/dw/1025301.md)
 
