--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-4 [【404文库】大象公社｜2014~2024，仅仅10年](/articles/cdt/339153.md)
+
+7-4 [秦朔朋友圈｜越发展，越需要外资外企和外国人](/articles/cdt/339155.md)
+
+7-4 [衣者褚｜从孩子们的嘴里夺食，罪大恶极](/articles/cdt/339157.md)
+
 7-4 [风慢慢｜美军偷叙利亚小麦这个新闻，戳中了我的笑点](/articles/cdt/339159.md)
 
 7-4 [每日一语 2024.7.3](/articles/cdt/339162.md)
@@ -594,10 +600,4 @@
 5-27 [旅界｜为什么很多酒店不愿意接待老外？](/articles/cdt/340292.md)
 
 5-27 [【404文库】李三一的零碎理论｜中国传媒大学近期之怪现状](/articles/cdt/340294.md)
-
-5-27 [风慢慢｜叶赫那拉守国门，是愚民的自嗨](/articles/cdt/340298.md)
-
-5-27 [亮见｜做刘强东的兄弟，您也配？](/articles/cdt/340304.md)
-
-5-27 [端传媒｜下岗与工运、牢狱与监视、疾病与衰老——重返工运领袖孟晗的前半生（节选）](/articles/cdt/340308.md)
 
