--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-4 [欧盟开始对进口中国电动车加征关税](/articles/voa/1014367.md)
+
+7-4 [北京以死刑威胁“台独”触发在华外企考虑将台湾员工撤离大陆](/articles/voa/1014368.md)
+
 7-4 [中国比亚迪在泰国开设东南亚首座电动车厂](/articles/voa/1014369.md)
 
 7-4 [英国大选开跑 工党预计将取得历史性胜利](/articles/voa/1014370.md)
@@ -596,8 +600,4 @@
 6-22 [TikTok提交的法律文件详述了针对潜在美国禁令的论点](/articles/voa/1014665.md)
 
 6-22 [五角大楼改变有关乌克兰使用美援武器越境打击俄罗斯的言辞](/articles/voa/1014666.md)
-
-6-22 [联合国秘书长：黎巴嫩不能“成为另一个加沙”](/articles/voa/1014667.md)
-
-6-22 [格鲁吉亚寻求中国投资，批评者担心背离西方](/articles/voa/1014668.md)
 
