--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-4 [上合中亚峰会：普习推动对抗西方联盟](/articles/dw/1024993.md)
+
+7-4 [菲律宾高级将领：今后将按照“比例原则”予以反击](/articles/dw/1024994.md)
+
+7-4 [税什么？比亚迪泰国新厂投产](/articles/dw/1024995.md)
+
 7-4 [内部分歧下欧盟开始对中国电动车加征临时关税](/articles/dw/1024996.md)
 
 7-4 [欧盟开始对中国电动车加征临时关税](/articles/dw/1024997.md)
@@ -594,10 +600,4 @@
 6-9 [DW言论自由奖授予纳瓦尔尼遗孀](/articles/dw/1025291.md)
 
 6-9 [拉美国家对中国经济影响力的不满情绪与日俱增](/articles/dw/1025292.md)
-
-6-9 [莫迪能否推动印度经济改革？](/articles/dw/1025293.md)
-
-6-9 [民调：澳大利亚人对中国的信任度大降](/articles/dw/1025294.md)
-
-6-8 [脸书上批评政府 越南两位知名人士被捕](/articles/dw/1025295.md)
 
