--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-4 [中印外长在阿斯塔纳会晤，双方同意加快谈判解决边界问题](/articles/voa/1014364.md)
+
+7-4 [中国“杀猪盘”魔爪伸向全球，警醒之后的美国打击力度仍远远不够](/articles/voa/1014365.md)
+
+7-4 [中国极左势力喊拆国军纪念碑 官方默认文革复辟？](/articles/voa/1014366.md)
+
 7-4 [欧盟开始对进口中国电动车加征关税](/articles/voa/1014367.md)
 
 7-4 [北京以死刑威胁“台独”触发在华外企考虑将台湾员工撤离大陆](/articles/voa/1014368.md)
@@ -594,10 +600,4 @@
 6-22 [中国警告欧盟可能引发贸易战](/articles/voa/1014662.md)
 
 6-22 [为研究伽马射线暴罕见太空合作 法国与中国联合发射天文卫星](/articles/voa/1014663.md)
-
-6-22 [分析：中国现金再次外流，人民币面临压力](/articles/voa/1014664.md)
-
-6-22 [TikTok提交的法律文件详述了针对潜在美国禁令的论点](/articles/voa/1014665.md)
-
-6-22 [五角大楼改变有关乌克兰使用美援武器越境打击俄罗斯的言辞](/articles/voa/1014666.md)
 
