--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [伦敦纪念中国709维权律师大抓捕事件九周年 张展、李昱函获奖](/articles/voa/1014359.md)
+
 7-5 [美国独立日出行人数破纪录，拜登白宫宴宾客参选决心不动摇](/articles/voa/1014360.md)
 
 7-5 [菲律宾总统下令军方缓和在南中国海的紧张局势](/articles/voa/1014361.md)
@@ -598,6 +600,4 @@
 6-22 [瞄准大疆创新、道通智能 美国会共和党人敦促拜登政府公布中国制无人机国安风险](/articles/voa/1014657.md)
 
 6-22 [涉“严重违纪违法” 中共中宣部副部长被查](/articles/voa/1014658.md)
-
-6-22 [迟来的国事访问 日本德仁天皇夫妇终启程前往英国](/articles/voa/1014659.md)
 
