--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-5 [美国迎来第248个独立日](/articles/voa/1014356.md)
+
+7-5 [日菲将召开2+2会议 能有效遏制中国海上扩张吗？](/articles/voa/1014357.md)
+
+7-5 [乌军撤出乌东一座关键城镇的部分地段](/articles/voa/1014358.md)
+
 7-5 [伦敦纪念中国709维权律师大抓捕事件九周年 张展、李昱函获奖](/articles/voa/1014359.md)
 
 7-5 [美国独立日出行人数破纪录，拜登白宫宴宾客参选决心不动摇](/articles/voa/1014360.md)
@@ -594,10 +600,4 @@
 6-22 [加沙拉法难民营遭到袭击，以军被指造成数十人丧生](/articles/voa/1014654.md)
 
 6-22 [专访蔡霞：中共政治新谜团，今日中国是“党天下”还是“习天下”？](/articles/voa/1014655.md)
-
-6-22 [理工科中国留学生入境美国会有问题吗？](/articles/voa/1014656.md)
-
-6-22 [瞄准大疆创新、道通智能 美国会共和党人敦促拜登政府公布中国制无人机国安风险](/articles/voa/1014657.md)
-
-6-22 [涉“严重违纪违法” 中共中宣部副部长被查](/articles/voa/1014658.md)
 
