--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [民兵组织袭击刚果金矿，打死六名中国矿工和两名刚果军人](/articles/voa/1014354.md)
+
 7-5 [真主党发动火箭袭击后，以色列打击黎巴嫩南部](/articles/voa/1014355.md)
 
 7-5 [美国迎来第248个独立日](/articles/voa/1014356.md)
@@ -598,6 +600,4 @@
 6-23 [美国亚太助卿康达对南中国海局势表示“深感关切”](/articles/voa/1014652.md)
 
 6-23 [德国副总理哈贝克：中国力挺俄罗斯是中欧和中德关系恶化关键](/articles/voa/1014653.md)
-
-6-22 [加沙拉法难民营遭到袭击，以军被指造成数十人丧生](/articles/voa/1014654.md)
 
