--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-5 [国际泳联证实美联邦政府已对中国游泳运动员兴奋剂检测阳性事件展开刑事调查](/articles/voa/1014352.md)
+
+7-5 [出口民调：苏纳克的保守党惨败，工党领袖斯塔默将成为英国首相](/articles/voa/1014353.md)
+
 7-5 [民兵组织袭击刚果金矿，打死六名中国矿工和两名刚果军人](/articles/voa/1014354.md)
 
 7-5 [真主党发动火箭袭击后，以色列打击黎巴嫩南部](/articles/voa/1014355.md)
@@ -596,8 +600,4 @@
 6-23 [俄罗斯对乌克兰能源设施发动新的导弹攻击](/articles/voa/1014650.md)
 
 6-23 [台湾发现41架中国军机绕岛飞行](/articles/voa/1014651.md)
-
-6-23 [美国亚太助卿康达对南中国海局势表示“深感关切”](/articles/voa/1014652.md)
-
-6-23 [德国副总理哈贝克：中国力挺俄罗斯是中欧和中德关系恶化关键](/articles/voa/1014653.md)
 
