--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [北约峰会下周开幕，印太与乌克兰将是中心议题](/articles/voa/1014351.md)
+
 7-5 [国际泳联证实美联邦政府已对中国游泳运动员兴奋剂检测阳性事件展开刑事调查](/articles/voa/1014352.md)
 
 7-5 [出口民调：苏纳克的保守党惨败，工党领袖斯塔默将成为英国首相](/articles/voa/1014353.md)
@@ -598,6 +600,4 @@
 6-23 [官员们说，以色列攻击加沙北部打死至少39人](/articles/voa/1014649.md)
 
 6-23 [俄罗斯对乌克兰能源设施发动新的导弹攻击](/articles/voa/1014650.md)
-
-6-23 [台湾发现41架中国军机绕岛飞行](/articles/voa/1014651.md)
 
