--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-5 [原点original｜洪峰过境“鱼米之乡”，湖南平江72小时洪灾纪实](/articles/cdt/339141.md)
+
+7-5 [维舟｜当长期信心被摧毁](/articles/cdt/339143.md)
+
+7-5 [每日一语 2024.7.4](/articles/cdt/339145.md)
+
+7-5 [三十六楼｜突发，碧桂园清零](/articles/cdt/339147.md)
+
 7-5 [【立此存照】国家电影局｜影片赴境外参加电影节（展）前须履行备案](/articles/cdt/339149.md)
 
 7-5 [三联生活周刊｜几十万套法拍房背后：那些还不上贷款的普通人](/articles/cdt/339151.md)
@@ -592,12 +600,4 @@
 5-28 [新新默存｜王五四：这届兄弟不行](/articles/cdt/340270.md)
 
 5-28 [每日一语 2024.5.27](/articles/cdt/340273.md)
-
-5-27 [风声OPINION｜中国房地产政策“史诗级”巨变，全面学习新加坡模式可行吗？](/articles/cdt/340277.md)
-
-5-27 [四环青年｜全家放弃继承才能销号？运营商别太为难人](/articles/cdt/340279.md)
-
-5-27 [天涯行路｜他们仗哪般，才敢如此为恶？](/articles/cdt/340282.md)
-
-5-27 [维舟｜东哥保留对兄弟的最终解释权](/articles/cdt/340284.md)
 
