--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-5 [部分国家和组织在联合国严批中国人权记录，其他发言者争相为北京捧场](/articles/voa/1014349.md)
+
+7-5 [“我不仅是为我发声”：法轮功学员在华盛顿讲述遭中共强摘器官经历](/articles/voa/1014350.md)
+
 7-5 [北约峰会下周开幕，印太与乌克兰将是中心议题](/articles/voa/1014351.md)
 
 7-5 [国际泳联证实美联邦政府已对中国游泳运动员兴奋剂检测阳性事件展开刑事调查](/articles/voa/1014352.md)
@@ -596,8 +600,4 @@
 6-23 [台湾“汉光演习”7月登场 取消展示性科目、尽可能模拟实战](/articles/voa/1014647.md)
 
 6-23 [就欧盟额外关税和俄罗斯问题，德国和中国在北京进行艰难的对话](/articles/voa/1014648.md)
-
-6-23 [官员们说，以色列攻击加沙北部打死至少39人](/articles/voa/1014649.md)
-
-6-23 [俄罗斯对乌克兰能源设施发动新的导弹攻击](/articles/voa/1014650.md)
 
