--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-5 [【CDT报告汇】UCLA调查：超过半数中国受访者支持同性婚姻（外二篇）](/articles/cdt/339139.md)
+
 7-5 [原点original｜洪峰过境“鱼米之乡”，湖南平江72小时洪灾纪实](/articles/cdt/339141.md)
 
 7-5 [维舟｜当长期信心被摧毁](/articles/cdt/339143.md)
@@ -598,6 +600,4 @@
 5-28 [张3丰的世界｜恰恰是防护网哲学加剧了自杀](/articles/cdt/340269.md)
 
 5-28 [新新默存｜王五四：这届兄弟不行](/articles/cdt/340270.md)
-
-5-28 [每日一语 2024.5.27](/articles/cdt/340273.md)
 
