--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [欧盟对中国电动汽车启动加税之际北京敦促欧盟谈判“展现诚意”](/articles/voa/1014348.md)
+
 7-5 [部分国家和组织在联合国严批中国人权记录，其他发言者争相为北京捧场](/articles/voa/1014349.md)
 
 7-5 [“我不仅是为我发声”：法轮功学员在华盛顿讲述遭中共强摘器官经历](/articles/voa/1014350.md)
@@ -598,6 +600,4 @@
 6-23 [梵蒂冈任命中国杭州教区主教 并传达教宗方济各有意访问中国](/articles/voa/1014646.md)
 
 6-23 [台湾“汉光演习”7月登场 取消展示性科目、尽可能模拟实战](/articles/voa/1014647.md)
-
-6-23 [就欧盟额外关税和俄罗斯问题，德国和中国在北京进行艰难的对话](/articles/voa/1014648.md)
 
