--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [英国工党在议会选举中大获全胜 工党领导人斯塔默将出任英国首相](/articles/voa/1014345.md)
+
 7-5 [中国军事活动增多，台湾呼吁北京勿加剧紧张局势](/articles/voa/1014346.md)
 
 7-5 [印度总理莫迪将访问俄罗斯](/articles/voa/1014347.md)
@@ -598,6 +600,4 @@
 6-23 [俄罗斯议员警告称 莫斯科可能改变动用核武时机](/articles/voa/1014643.md)
 
 6-23 [也门胡塞武装声称连两天在红海发动袭 美国否认航母遭攻击](/articles/voa/1014644.md)
-
-6-23 [美航母“罗斯福号”抵釜山 参加韩美日“自由之刃”联合军演](/articles/voa/1014645.md)
 
