--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-5 [香港法院听取47人案的减刑请求 黄之锋律师称其未参与组织或协助初选](/articles/voa/1014343.md)
+
+7-5 [伊朗总统第二轮决选投票开始 强硬派前谈判代表与改革派议员对决](/articles/voa/1014344.md)
+
 7-5 [英国工党在议会选举中大获全胜 工党领导人斯塔默将出任英国首相](/articles/voa/1014345.md)
 
 7-5 [中国军事活动增多，台湾呼吁北京勿加剧紧张局势](/articles/voa/1014346.md)
@@ -596,8 +600,4 @@
 6-23 [德国副总理呼吁北京放弃煤炭发电并寻找安全替代](/articles/voa/1014641.md)
 
 6-23 [中菲冲突升级之际 小马科斯：菲律宾无意挑起争端但也不会被吓倒](/articles/voa/1014642.md)
-
-6-23 [俄罗斯议员警告称 莫斯科可能改变动用核武时机](/articles/voa/1014643.md)
-
-6-23 [也门胡塞武装声称连两天在红海发动袭 美国否认航母遭攻击](/articles/voa/1014644.md)
 
