--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-5 [德国政府就明年预算达成一致 刺激经济方案出台](/articles/dw/1024988.md)
+
+7-5 [AI大会上海举行 中国努力追赶美国](/articles/dw/1024989.md)
+
 7-5 [特斯拉柏林超级工厂扩建获批](/articles/dw/1024990.md)
 
 7-5 [血色香蕉: 美国法院判“金吉达”违反人权应赔偿3800万](/articles/dw/1024991.md)
@@ -596,8 +600,4 @@
 6-10 [歐洲議會極端勢力席次增 親華影響力擴大？](/articles/dw/1025286.md)
 
 6-9 [墙外文摘：新冠病毒可能来自武汉病毒研究所](/articles/dw/1025287.md)
-
-6-9 [中国指责美国将南中国海地区拉入“军备竞赛漩涡”](/articles/dw/1025288.md)
-
-6-9 [旅德台湾人谈台湾“废死之辩”](/articles/dw/1025289.md)
 
