--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-6 [印度外交秘书：莫迪访俄将争取被骗加入俄军的印度人提前回国](/articles/voa/1014335.md)
+
+7-6 [英国工党议会选举大胜执政后，外交政策是否会有重大变化？](/articles/voa/1014336.md)
+
 7-6 [海外华人遇袭登微博热搜，分析: 恐为平衡或洗白中国仇外犯行](/articles/voa/1014337.md)
 
 7-5 [特斯拉首次进入中国政府采购清单](/articles/voa/1014338.md)
@@ -596,8 +600,4 @@
 6-24 [沙特朝觐死亡人数在酷热中增加到1300人](/articles/voa/1014633.md)
 
 6-24 [达赖喇嘛抵达美国接受膝盖治疗](/articles/voa/1014634.md)
-
-6-24 [巴基斯坦批准铲除恐怖主义的新行动 中国压力是重要原因](/articles/voa/1014635.md)
-
-6-24 [厄瓜多尔取消对中国免签，“走线”的大门关上了吗？](/articles/voa/1014636.md)
 
