--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [西班牙和法国捣毁每日受理百万欧元的国际洗钱网络，其成员为在欧洲的中国公民](/articles/voa/1014334.md)
+
 7-6 [印度外交秘书：莫迪访俄将争取被骗加入俄军的印度人提前回国](/articles/voa/1014335.md)
 
 7-6 [英国工党议会选举大胜执政后，外交政策是否会有重大变化？](/articles/voa/1014336.md)
@@ -598,6 +600,4 @@
 6-24 [美国各地温度飙升，中西部同时爆发致命洪水](/articles/voa/1014632.md)
 
 6-24 [沙特朝觐死亡人数在酷热中增加到1300人](/articles/voa/1014633.md)
-
-6-24 [达赖喇嘛抵达美国接受膝盖治疗](/articles/voa/1014634.md)
 
