--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-6 [台湾渔船在接近日本海域遭日方登检扣押，经台日交涉缴交罚金后获释](/articles/voa/1014327.md)
+
+7-6 [伦敦维吾尔族抗议: 纪念七五事件15周年，呼吁工党政府对中国施压](/articles/voa/1014328.md)
+
+7-6 [内塔尼亚胡表示与哈马斯的停火谈判将于下周恢复](/articles/voa/1014329.md)
+
 7-6 [狱中遭监管“包夹” 中国公民运动领袖许志永再传被酷刑](/articles/voa/1014330.md)
 
 7-6 [印度在商业压力下考虑放宽对中国工人的签证限制](/articles/voa/1014331.md)
@@ -594,10 +600,4 @@
 6-24 [英国高级法官在外国法官风波中审理香港抗议案](/articles/voa/1014625.md)
 
 6-24 [中国称对美国拟议的对华投资限制保留采取相应措施的权利](/articles/voa/1014626.md)
-
-6-24 [回应中国“惩治台独”新规 台湾总统：民主非罪、中国无权制裁](/articles/voa/1014627.md)
-
-6-24 [台经济部长率企业代表访美 盼深化双边投资经贸](/articles/voa/1014628.md)
-
-6-24 [中国希望欧盟在7月4日前取消电动汽车关税](/articles/voa/1014629.md)
 
