--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [与中国接壤的缅甸东北地区战火再起，民族武装联手攻击军政权阵地](/articles/voa/1014326.md)
+
 7-6 [台湾渔船在接近日本海域遭日方登检扣押，经台日交涉缴交罚金后获释](/articles/voa/1014327.md)
 
 7-6 [伦敦维吾尔族抗议: 纪念七五事件15周年，呼吁工党政府对中国施压](/articles/voa/1014328.md)
@@ -598,6 +600,4 @@
 6-24 [聿文视界：中国越来越像一个警察国家](/articles/voa/1014624.md)
 
 6-24 [英国高级法官在外国法官风波中审理香港抗议案](/articles/voa/1014625.md)
-
-6-24 [中国称对美国拟议的对华投资限制保留采取相应措施的权利](/articles/voa/1014626.md)
 
