--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [乌克兰宣布从德国获得了更多的防空支持](/articles/voa/1014325.md)
+
 7-6 [与中国接壤的缅甸东北地区战火再起，民族武装联手攻击军政权阵地](/articles/voa/1014326.md)
 
 7-6 [台湾渔船在接近日本海域遭日方登检扣押，经台日交涉缴交罚金后获释](/articles/voa/1014327.md)
@@ -598,6 +600,4 @@
 6-24 [朝鲜持续向韩国空飘“垃圾气球” 其中被验出含有寄生虫的人类秽物](/articles/voa/1014623.md)
 
 6-24 [聿文视界：中国越来越像一个警察国家](/articles/voa/1014624.md)
-
-6-24 [英国高级法官在外国法官风波中审理香港抗议案](/articles/voa/1014625.md)
 
