--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [摩尔多瓦外长称有权驱逐更多俄罗斯外交官](/articles/voa/1014323.md)
+
 7-6 [南中国海紧张升级，美国是否派兵援助菲律宾？](/articles/voa/1014324.md)
 
 7-6 [乌克兰宣布从德国获得了更多的防空支持](/articles/voa/1014325.md)
@@ -598,6 +600,4 @@
 6-24 [美网络安全公司：中国黑客加剧对台湾机构和组织的网攻](/articles/voa/1014621.md)
 
 6-24 [中国传砸钱渗透台湾网红艺人圈](/articles/voa/1014622.md)
-
-6-24 [朝鲜持续向韩国空飘“垃圾气球” 其中被验出含有寄生虫的人类秽物](/articles/voa/1014623.md)
 
