--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [极端降雨量洪水高涨 洞庭湖决堤迁离5千多人](/articles/voa/1014322.md)
+
 7-6 [摩尔多瓦外长称有权驱逐更多俄罗斯外交官](/articles/voa/1014323.md)
 
 7-6 [南中国海紧张升级，美国是否派兵援助菲律宾？](/articles/voa/1014324.md)
@@ -598,6 +600,4 @@
 6-24 [菲防长：中国使用非法武力故意阻拦菲补给任务，冲突既非误会也非事故](/articles/voa/1014620.md)
 
 6-24 [美网络安全公司：中国黑客加剧对台湾机构和组织的网攻](/articles/voa/1014621.md)
-
-6-24 [中国传砸钱渗透台湾网红艺人圈](/articles/voa/1014622.md)
 
