--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-6 [台湾两岸事务重要人士郑文灿 市长任内疑涉贪污罪遭调查](/articles/voa/1014318.md)
+
+7-6 [消息人士称哈马斯接受了美国针对以色列人质谈判的提议](/articles/voa/1014319.md)
+
 7-6 [斯塔默上任英国首相后承诺开始“重建英国”](/articles/voa/1014320.md)
 
 7-6 [伊朗新总统决选揭晓 改革派佩泽什基安胜出](/articles/voa/1014321.md)
@@ -596,8 +600,4 @@
 6-25 [俄罗斯达吉斯坦枪击事件造成20人死亡](/articles/voa/1014616.md)
 
 6-25 [欧盟对俄实施第14轮制裁，阻止企业规避现有制裁](/articles/voa/1014617.md)
-
-6-24 [习近平在北京与波兰总统杜达会晤 俄乌战争是主要讨论议题](/articles/voa/1014618.md)
-
-6-24 [韩国锂电池厂爆炸失火，二十多工人遇难，多数是中国人](/articles/voa/1014619.md)
 
