--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-6 [台湾桃园前市长郑文灿涉贪 法院裁500万新台币交保](/articles/dw/1024977.md)
+
+7-6 [拜登打破传闻：没有计划辞职](/articles/dw/1024978.md)
+
+7-6 [奥尔班闪电访普京 欧盟大怒](/articles/dw/1024979.md)
+
+7-6 [对中国产电车征税 欧盟解释为什么](/articles/dw/1024980.md)
+
 7-6 [美国大选：民主党会换下拜登吗？](/articles/dw/1024981.md)
 
 7-6 [2024欧洲杯：球衣争夺战](/articles/dw/1024982.md)
@@ -592,12 +600,4 @@
 6-10 [乌边防局：32名外逃乌克兰男子在匈牙利被捕](/articles/dw/1025275.md)
 
 6-10 [印度的崛起之路会成功吗](/articles/dw/1025276.md)
-
-6-10 [德国在野党呼吁提前大选 联邦政府回应“不可能”](/articles/dw/1025277.md)
-
-6-10 [马斯克称德国“AfD立场听起来并不极端”](/articles/dw/1025278.md)
-
-6-10 [德国经济界呼吁欧盟推进改革](/articles/dw/1025279.md)
-
-6-10 [2024大选后：欧洲集体向右转？](/articles/dw/1025280.md)
 
