--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [三中全会军队篇：解放军忠于习近平吗？](/articles/voa/1014317.md)
+
 7-6 [台湾两岸事务重要人士郑文灿 市长任内疑涉贪污罪遭调查](/articles/voa/1014318.md)
 
 7-6 [消息人士称哈马斯接受了美国针对以色列人质谈判的提议](/articles/voa/1014319.md)
@@ -598,6 +600,4 @@
 6-25 [香港记协选出新一届执委 现主席陈朗升指香港本地传媒萎缩](/articles/voa/1014615.md)
 
 6-25 [俄罗斯达吉斯坦枪击事件造成20人死亡](/articles/voa/1014616.md)
-
-6-25 [欧盟对俄实施第14轮制裁，阻止企业规避现有制裁](/articles/voa/1014617.md)
 
