--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-6 [达赖喇嘛在美国庆祝89岁生日，否认有关他健康不佳谣言](/articles/voa/1014315.md)
+
+7-6 [专访台湾驻美代表俞大㵢:台湾希望稳定安全，争端制造者是中方](/articles/voa/1014316.md)
+
 7-6 [三中全会军队篇：解放军忠于习近平吗？](/articles/voa/1014317.md)
 
 7-6 [台湾两岸事务重要人士郑文灿 市长任内疑涉贪污罪遭调查](/articles/voa/1014318.md)
@@ -596,8 +600,4 @@
 6-25 [有迹象显示俄朝防御协议令中国不安](/articles/voa/1014613.md)
 
 6-25 [美国最高法院将审议跨性别未成年人的健保案件](/articles/voa/1014614.md)
-
-6-25 [香港记协选出新一届执委 现主席陈朗升指香港本地传媒萎缩](/articles/voa/1014615.md)
-
-6-25 [俄罗斯达吉斯坦枪击事件造成20人死亡](/articles/voa/1014616.md)
 
