--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [中国以大欺小再出新招，海警巨无霸锚泊菲专属经济区](/articles/voa/1014314.md)
+
 7-6 [达赖喇嘛在美国庆祝89岁生日，否认有关他健康不佳谣言](/articles/voa/1014315.md)
 
 7-6 [专访台湾驻美代表俞大㵢:台湾希望稳定安全，争端制造者是中方](/articles/voa/1014316.md)
@@ -598,6 +600,4 @@
 6-25 [加拿大开始30天磋商，对中国电动汽车征收附加税](/articles/voa/1014612.md)
 
 6-25 [有迹象显示俄朝防御协议令中国不安](/articles/voa/1014613.md)
-
-6-25 [美国最高法院将审议跨性别未成年人的健保案件](/articles/voa/1014614.md)
 
