--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-7 [美台智库共议中共法律战 余茂春:台海“国际化”才能有效吓阻中国](/articles/voa/1014312.md)
+
 7-7 [中欧电动车关税之争远未结束，欧盟报告曝光，调查之细出人意外](/articles/voa/1014313.md)
 
 7-6 [中国以大欺小再出新招，海警巨无霸锚泊菲专属经济区](/articles/voa/1014314.md)
@@ -598,6 +600,4 @@
 6-25 [乌克兰向克里米亚发射美国导弹，俄罗斯誓言报复美国](/articles/voa/1014610.md)
 
 6-25 [面对批评声音和资金短缺，联合国巴勒斯坦难民救济处负责人为本机构辩护](/articles/voa/1014611.md)
-
-6-25 [加拿大开始30天磋商，对中国电动汽车征收附加税](/articles/voa/1014612.md)
 
