--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-7 [少数族裔战斗人员攻入缅甸北方重镇腊戌](/articles/voa/1014309.md)
+
 7-7 [官员们说，哈马斯放弃关键要求，为加沙可能停火清除了道路](/articles/voa/1014310.md)
 
 7-7 [达赖喇嘛89寿辰，流亡西藏人担心没有他的未来](/articles/voa/1014311.md)
@@ -598,6 +600,4 @@
 6-25 [大疆无人机有望在全美禁用，美国制造商将迎来黄金时代？](/articles/voa/1014607.md)
 
 6-25 [英国向中国出口大批军事设备 武器禁运形同虚设](/articles/voa/1014608.md)
-
-6-25 [国事光析: 特权成灾，社会之癌](/articles/voa/1014609.md)
 
