--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-7 [西门读书｜乾隆：他一个人导演了从盛世到萧条的大戏](/articles/cdt/339097.md)
+
 7-7 [【404文库】丹江湖上钓鱼翁｜繁华渐逝：腹背受敌的中国经济（3万字长文）](/articles/cdt/339098.md)
 
 7-6 [建设性意见｜美军十几辆卡车偷叙利亚的小麦，是要烙大饼给国庆献礼吗？](/articles/cdt/339111.md)
@@ -598,6 +600,4 @@
 5-29 [唐师三百手｜年轻人自杀令人痛心，没人知悉背后缘由更感悲凉](/articles/cdt/340237.md)
 
 5-29 [那些原本是废话的常识｜有多少中国人，一辈子从未为自己而活？](/articles/cdt/340239.md)
-
-5-29 [每日一语 2024.5.28](/articles/cdt/340245.md)
 
