--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-7 [北约75年峰会在即 乌克兰战争、欧洲增加国防支出的挑战及美国可靠性引发担忧](/articles/voa/1014306.md)
+
+7-7 [习近平与卢卡申科会晤后 两国陆军举行联合训练](/articles/voa/1014307.md)
+
 7-7 [俄罗斯攻击让乌克兰北部几万人断电断水](/articles/voa/1014308.md)
 
 7-7 [少数族裔战斗人员攻入缅甸北方重镇腊戌](/articles/voa/1014309.md)
@@ -596,8 +600,4 @@
 6-25 [美国发表本年度《人口贩运报告》，中国仍被列为第三级国家](/articles/voa/1014604.md)
 
 6-25 [以色列对黎巴嫩的进攻可能扩大战争，并卷入伊朗](/articles/voa/1014605.md)
-
-6-25 [美副卿坎贝尔谈中菲撞船、普京访朝：美国与印太盟友致力维护地区和平稳定](/articles/voa/1014606.md)
-
-6-25 [大疆无人机有望在全美禁用，美国制造商将迎来黄金时代？](/articles/voa/1014607.md)
 
