--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-7 [伊朗大选：改革派佩泽什基安获胜 挑战与希望并存](/articles/dw/1024970.md)
+
 7-7 [这些年 岁月如何蚀刻了阿桑奇的容颜?](/articles/dw/1024971.md)
 
 7-7 [AI后浪滚滚 德国成了拍死在沙滩的前浪?](/articles/dw/1024972.md)
@@ -598,6 +600,4 @@
 6-11 [调查: 80%德企赞成对中国电动车加征关税](/articles/dw/1025268.md)
 
 6-11 [德乌合资军火企业在乌克兰投入使用](/articles/dw/1025269.md)
-
-6-11 [安理会通过旨在结束加沙战争的决议](/articles/dw/1025270.md)
 
