--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-7 [经济前景悲观 中国人躺平新去处--青年养老院](/articles/voa/1014300.md)
+
+7-7 [三中全会文化篇：赞颂习“文化体制改革”成就意图何在](/articles/voa/1014301.md)
+
 7-7 [法国举行议会决选 将决定由极右翼统治或形成悬浮议会](/articles/voa/1014302.md)
 
 7-7 [德克萨斯州州长访问台湾 宣布开设驻台办事处强化经贸合作](/articles/voa/1014303.md)
@@ -596,8 +600,4 @@
 6-25 [人民币兑美元汇率再创新低](/articles/voa/1014598.md)
 
 6-25 [李强为“产能过剩”辩护 称中国电动车和锂电池生产“丰富了国际市场”](/articles/voa/1014599.md)
-
-6-25 [维基解密创办人阿桑奇与美国司法部达成协议，认罪后将重获自由并返回澳大利亚](/articles/voa/1014600.md)
-
-6-25 [撞毁巴尔的摩大桥的货轮驶离巴尔的摩前往弗吉尼亚](/articles/voa/1014601.md)
 
