--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-7 [以哈战争九个月，以全国再爆示威要求停火，公路和政府部长住宅遭封堵](/articles/voa/1014299.md)
+
 7-7 [经济前景悲观 中国人躺平新去处--青年养老院](/articles/voa/1014300.md)
 
 7-7 [三中全会文化篇：赞颂习“文化体制改革”成就意图何在](/articles/voa/1014301.md)
@@ -598,6 +600,4 @@
 6-25 [中国的嫦娥六号月球探测器成功返回地球](/articles/voa/1014597.md)
 
 6-25 [人民币兑美元汇率再创新低](/articles/voa/1014598.md)
-
-6-25 [李强为“产能过剩”辩护 称中国电动车和锂电池生产“丰富了国际市场”](/articles/voa/1014599.md)
 
