--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-7 [墙外文摘：“爱国人士”的潜在暴力没有消失](/articles/dw/1024965.md)
+
+7-7 [法国议会决选 未来引人担忧](/articles/dw/1024966.md)
+
+7-7 [前ASML首席执行官：美中芯片争端可能持续数十年](/articles/dw/1024967.md)
+
 7-7 [中国士兵抵达白俄罗斯参加反恐演习](/articles/dw/1024968.md)
 
 7-7 [中国士兵抵达白俄罗斯参加联合反恐演习](/articles/dw/1024969.md)
@@ -594,10 +600,4 @@
 6-11 [德国主办乌克兰重建会议 签署战后重建意向声明](/articles/dw/1025263.md)
 
 6-11 [新航将赔偿气流颠簸事件机上乘客](/articles/dw/1025264.md)
-
-6-11 [可以免上早课的德国中学](/articles/dw/1025265.md)
-
-6-11 [中国战机东海盘旋荷兰军舰 双方口水战继续](/articles/dw/1025266.md)
-
-6-11 [英法官指香港法治「嚴重受損」 李家超反駁](/articles/dw/1025267.md)
 
