--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-7 [斯塔默任首相两天后李强才电贺，称中英应加强协调合作](/articles/voa/1014298.md)
+
 7-7 [以哈战争九个月，以全国再爆示威要求停火，公路和政府部长住宅遭封堵](/articles/voa/1014299.md)
 
 7-7 [经济前景悲观 中国人躺平新去处--青年养老院](/articles/voa/1014300.md)
@@ -598,6 +600,4 @@
 6-25 [苏州日侨校车遭袭、日本母子受伤 日驻华使馆提醒公民出行提高警觉](/articles/voa/1014596.md)
 
 6-25 [中国的嫦娥六号月球探测器成功返回地球](/articles/voa/1014597.md)
-
-6-25 [人民币兑美元汇率再创新低](/articles/voa/1014598.md)
 
