--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 7-7 [【404文库】丹江湖上钓鱼翁｜繁华渐逝：腹背受敌的中国经济（3万字长文）](/articles/cdt/339098.md)
 
+7-8 [【404文库】“2014年到2024年，仅仅十年而已”（外二篇）](/articles/cdt/339105.md)
+
 7-6 [建设性意见｜美军十几辆卡车偷叙利亚的小麦，是要烙大饼给国庆献礼吗？](/articles/cdt/339111.md)
 
 7-6 [阜成门六号院｜这一波经济周期变幻，受伤害最大的是8090后一代](/articles/cdt/339114.md)
@@ -598,6 +600,4 @@
 5-30 [每日一语 2024.5.29](/articles/cdt/340229.md)
 
 5-29 [【网络民议】主因是什么？主因就是您啊主席！](/articles/cdt/340233.md)
-
-5-29 [风慢慢｜反腐越厉，贪的越多](/articles/cdt/340236.md)
 
