--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-8 [印度总理莫迪前往莫斯科 关注俄中关系](/articles/voa/1014295.md)
+
 7-8 [民调显示，法国左派人士在选举中赢得多数席位，缺乏多数会制造动荡](/articles/voa/1014296.md)
 
 7-8 [乌克兰无人机袭击导致俄一库房爆炸，俄乌前线消耗战仍在持续](/articles/voa/1014297.md)
@@ -598,6 +600,4 @@
 6-25 [孙韵：中菲6.17海上冲突波云诡谲](/articles/voa/1014593.md)
 
 6-25 [香港泛民47人初选案首批被告进入判刑前减刑答辩](/articles/voa/1014594.md)
-
-6-25 [苏州日侨校车持刀行凶嫌犯已被拘捕，“偶发”频率越来越高](/articles/voa/1014595.md)
 
