--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-8 [物价高企、债务失控：经济焦虑加剧全球政治动荡](/articles/nyt/1042607.md)
+
 7-5 [为什么越来越多法国年轻人投票支持极右翼](/articles/nyt/1042608.md)
 
 7-5 [工党时隔14年赢得大选，英国“转向”前途仍不乐观](/articles/nyt/1042609.md)
@@ -598,6 +600,4 @@
 3-29 [布林肯警告中国不要“武装”袭击菲律宾船只](/articles/nyt/1042905.md)
 
 3-29 [中美太空竞赛延伸至卫星领域，美国潜在风险引发担忧](/articles/nyt/1042906.md)
-
-3-28 [马斯克：与中国“共生”的利益与风险](/articles/nyt/1042907.md)
 
