--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-8 [法國議會選舉意外翻盤 左翼聯盟力壓極右派](/articles/dw/1024962.md)
+
 7-8 [匈牙利總理歐爾班突訪華會習近平](/articles/dw/1024963.md)
 
 7-8 [欧尔班闪电访普京 欧盟大怒](/articles/dw/1024964.md)
@@ -598,6 +600,4 @@
 6-12 [成立不到半年的德国小党为何欧洲议会选举中能大有斩获？](/articles/dw/1025260.md)
 
 6-12 [涉新疆強迫勞動 三中企入列美制裁名單](/articles/dw/1025261.md)
-
-6-12 [左脚在德国、右脚在法国: 德法边境的小村庄](/articles/dw/1025262.md)
 
