--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-8 [每日一语 2024.7.7](/articles/cdt/339081.md)
+
 7-7 [Lola｜边疆、民族与宗教：国歌不会唱，就不是中国人了](/articles/cdt/339095.md)
 
 7-7 [西门读书｜乾隆：他一个人导演了从盛世到萧条的大戏](/articles/cdt/339097.md)
@@ -598,6 +600,4 @@
 5-30 [木蹊说｜敢不敢和民营资本做兄弟？](/articles/cdt/340225.md)
 
 5-30 [每日一语 2024.5.29](/articles/cdt/340229.md)
-
-5-29 [【网络民议】主因是什么？主因就是您啊主席！](/articles/cdt/340233.md)
 
