--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-8 [法国大选：左翼联盟崛起，联合阻击极右翼](/articles/nyt/1042606.md)
+
 7-8 [物价高企、债务失控：经济焦虑加剧全球政治动荡](/articles/nyt/1042607.md)
 
 7-5 [为什么越来越多法国年轻人投票支持极右翼](/articles/nyt/1042608.md)
@@ -598,6 +600,4 @@
 3-29 [债务泥潭、童婚和被摘除的子宫：糖的残酷真相](/articles/nyt/1042904.md)
 
 3-29 [布林肯警告中国不要“武装”袭击菲律宾船只](/articles/nyt/1042905.md)
-
-3-29 [中美太空竞赛延伸至卫星领域，美国潜在风险引发担忧](/articles/nyt/1042906.md)
 
