--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-8 [欧盟气候监测机构：上月为记录以来最热6月](/articles/voa/1014291.md)
+
 7-8 [菲律宾与日本签署具里程碑意义的防务协定](/articles/voa/1014292.md)
 
 7-8 [匈牙利总理欧尔班抵达北京，与中国主席习近平会谈](/articles/voa/1014293.md)
@@ -598,6 +600,4 @@
 6-26 [美国对中国三大通信巨头展开调查 以防数据落入北京之手](/articles/voa/1014589.md)
 
 6-26 [日籍母子苏州遇袭，中国又称“偶发事件” 分析:官方放任民怨仇外](/articles/voa/1014590.md)
-
-6-25 [哈马斯政治领导人哈尼亚多名亲属在以军空袭中丧生](/articles/voa/1014591.md)
 
