--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-8 [麦杰逊｜新京报这次把5位大佬得罪了](/articles/cdt/339077.md)
+
+7-8 [新京报｜罐车运输乱象调查：卸完煤制油直接装运食用大豆油](/articles/cdt/339079.md)
+
 7-8 [每日一语 2024.7.7](/articles/cdt/339081.md)
 
 7-7 [Lola｜边疆、民族与宗教：国歌不会唱，就不是中国人了](/articles/cdt/339095.md)
@@ -596,8 +600,4 @@
 5-30 [那些原本是废话的常识｜注重传统的东亚社会为何生育率反而最低？就是因为太传统了](/articles/cdt/340219.md)
 
 5-30 [城市的地得｜不让读外国诗的保安，和他曾品尝到的权力滋味](/articles/cdt/340222.md)
-
-5-30 [木蹊说｜敢不敢和民营资本做兄弟？](/articles/cdt/340225.md)
-
-5-30 [每日一语 2024.5.29](/articles/cdt/340229.md)
 
