--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-8 [往事与随想｜墙国](/articles/cdt/339073.md)
+
+7-8 [财话连篇｜没有道歉！没有召回！中储粮回应罐车混用，网友呼吁严惩判刑](/articles/cdt/339075.md)
+
 7-8 [麦杰逊｜新京报这次把5位大佬得罪了](/articles/cdt/339077.md)
 
 7-8 [新京报｜罐车运输乱象调查：卸完煤制油直接装运食用大豆油](/articles/cdt/339079.md)
@@ -596,8 +600,4 @@
 5-30 [凤羽财经｜全椒的干部，爱说心里话](/articles/cdt/340215.md)
 
 5-30 [刑辩中坚｜张磊：我是如何成为一个废死主义者的](/articles/cdt/340217.md)
-
-5-30 [那些原本是废话的常识｜注重传统的东亚社会为何生育率反而最低？就是因为太传统了](/articles/cdt/340219.md)
-
-5-30 [城市的地得｜不让读外国诗的保安，和他曾品尝到的权力滋味](/articles/cdt/340222.md)
 
