--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-8 [诺奖得主门罗之女称曾遭继父性侵，指母亲置之不理](/articles/nyt/1042604.md)
+
 7-8 [日本东京都知事选举，一场民主“闹剧”？](/articles/nyt/1042605.md)
 
 7-8 [法国大选：左翼联盟崛起，联合阻击极右翼](/articles/nyt/1042606.md)
@@ -598,6 +600,4 @@
 3-29 [台湾外长：美国是否继续军援乌克兰对台海局势意义重大](/articles/nyt/1042902.md)
 
 3-29 [中国取消对澳大利亚葡萄酒加征关税](/articles/nyt/1042903.md)
-
-3-29 [债务泥潭、童婚和被摘除的子宫：糖的残酷真相](/articles/nyt/1042904.md)
 
