--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-8 [普京能否依靠印度推动俄罗斯的战争经济？](/articles/dw/1024959.md)
+
+7-8 [匈牙利總理突訪華  習近平呼籲大國應發揮正能量](/articles/dw/1024960.md)
+
 7-8 [选战团队准备好问题 拜登媒体采访引争议](/articles/dw/1024961.md)
 
 7-8 [法國議會選舉意外翻盤 左翼聯盟力壓極右派](/articles/dw/1024962.md)
@@ -596,8 +600,4 @@
 6-12 [反送中五週年 港府撤銷六港人護照](/articles/dw/1025257.md)
 
 6-12 [東京聲援：反送中五週年遊行](/articles/dw/1025258.md)
-
-6-12 [以色列解救四名被哈马斯劫持的人质](/articles/dw/1025259.md)
-
-6-12 [成立不到半年的德国小党为何欧洲议会选举中能大有斩获？](/articles/dw/1025260.md)
 
