--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-8 [聿文视界：中共三中全会，戴着镣铐的所谓“改革”](/articles/voa/1014286.md)
+
 7-8 [报道：韩国总统尹锡悦将在北约峰会讨论朝鲜对欧洲的“明显威胁”](/articles/voa/1014287.md)
 
 7-8 [民主党国会议员本周将就是否支持拜登继续竞选作出决定](/articles/voa/1014288.md)
@@ -598,6 +600,4 @@
 6-26 [警察和反增税示威者在肯尼亚议会外发生冲突，导致几人死亡](/articles/voa/1014584.md)
 
 6-26 [非洲人工智能成为美中竞争新领域](/articles/voa/1014585.md)
-
-6-26 [美制裁为伊朗军方转移数十亿美元的“影子银行”网络，包括香港公司](/articles/voa/1014586.md)
 
