--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-8 [阿斯麦总裁：中美芯片战不应继续升级](/articles/dw/1024958.md)
+
 7-8 [普京能否依靠印度推动俄罗斯的战争经济？](/articles/dw/1024959.md)
 
 7-8 [匈牙利總理突訪華  習近平呼籲大國應發揮正能量](/articles/dw/1024960.md)
@@ -598,6 +600,4 @@
 6-12 [專訪羅冠聰：我只是大歷史中的小人物](/articles/dw/1025256.md)
 
 6-12 [反送中五週年 港府撤銷六港人護照](/articles/dw/1025257.md)
-
-6-12 [東京聲援：反送中五週年遊行](/articles/dw/1025258.md)
 
