--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-8 [中国称菲律宾在南中国海坐滩军舰严重损害珊瑚礁生态系统](/articles/voa/1014283.md)
+
+7-8 [中国乘用车销售六月连续第三个月下滑，同比下降6.9%](/articles/voa/1014284.md)
+
+7-8 [美国主办北约峰会再提中国议程，你需要知道的五个要点](/articles/voa/1014285.md)
+
 7-8 [聿文视界：中共三中全会，戴着镣铐的所谓“改革”](/articles/voa/1014286.md)
 
 7-8 [报道：韩国总统尹锡悦将在北约峰会讨论朝鲜对欧洲的“明显威胁”](/articles/voa/1014287.md)
@@ -594,10 +600,4 @@
 6-26 [推特上的中国：美驻华大使罕见严词指责北京，显示双边关系有多么的差](/articles/voa/1014581.md)
 
 6-26 [美医务总监将美国枪支暴力宣布为“公共卫生危机”](/articles/voa/1014582.md)
-
-6-26 [美驻华大使：北京使得加强美中民间交流变得“不可能”](/articles/voa/1014583.md)
-
-6-26 [警察和反增税示威者在肯尼亚议会外发生冲突，导致几人死亡](/articles/voa/1014584.md)
-
-6-26 [非洲人工智能成为美中竞争新领域](/articles/voa/1014585.md)
 
