--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-8 [【异闻观止】特斯拉进入江苏省政府用车采购目录 工作人员：特斯拉属于国产](/articles/cdt/339057.md)
+
 7-8 [黑柳丁｜人心一旦凉了，就暖不回来了！](/articles/cdt/339065.md)
 
 7-8 [古老板的老巢｜中储油，为什么不道歉？](/articles/cdt/339067.md)
@@ -598,6 +600,4 @@
 5-31 [维舟｜勤劳已经不能致富](/articles/cdt/340201.md)
 
 5-31 [旧闻评论｜全椒水污染：权力交界处的风暴源头](/articles/cdt/340203.md)
-
-5-31 [【CDT月度视频】五月之声（2024）——向《四月之声》致敬](/articles/cdt/340207.md)
 
