--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-8 [每日一语 2024.7.8](/articles/cdt/339055.md)
+
 7-8 [【异闻观止】特斯拉进入江苏省政府用车采购目录 工作人员：特斯拉属于国产](/articles/cdt/339057.md)
+
+7-9 [玖奌杂货店｜新京报捅破了一个黑幕，已经快一个星期了](/articles/cdt/339063.md)
 
 7-8 [黑柳丁｜人心一旦凉了，就暖不回来了！](/articles/cdt/339065.md)
 
@@ -596,8 +600,4 @@
 6-1 [极昼工作室｜跑楼大妈与看不见的外卖江湖](/articles/cdt/340197.md)
 
 5-31 [徐潜川｜二零二三行香港记​](/articles/cdt/340199.md)
-
-5-31 [维舟｜勤劳已经不能致富](/articles/cdt/340201.md)
-
-5-31 [旧闻评论｜全椒水污染：权力交界处的风暴源头](/articles/cdt/340203.md)
 
