--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 7-8 [【异闻观止】特斯拉进入江苏省政府用车采购目录 工作人员：特斯拉属于国产](/articles/cdt/339057.md)
 
+7-9 [唐一水｜谁能躲过搀煤的食用油？](/articles/cdt/339059.md)
+
 7-9 [玖奌杂货店｜新京报捅破了一个黑幕，已经快一个星期了](/articles/cdt/339063.md)
 
 7-8 [黑柳丁｜人心一旦凉了，就暖不回来了！](/articles/cdt/339065.md)
@@ -598,6 +600,4 @@
 6-1 [【404文库】“我们原以为，互联网是有记忆的，但没有想到，这种记忆，原来是像金鱼一样的记忆”（外二篇）](/articles/cdt/340194.md)
 
 6-1 [极昼工作室｜跑楼大妈与看不见的外卖江湖](/articles/cdt/340197.md)
-
-5-31 [徐潜川｜二零二三行香港记​](/articles/cdt/340199.md)
 
