--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-9 [拜登致函国会民主党人，要求“结束”有关他是否应退选的辩论](/articles/voa/1014274.md)
+
+7-9 [美国寻求加强对外国人在军事设施附近购买房地产的审查](/articles/voa/1014275.md)
+
+7-9 [香港特首重心转移拚经济 号召力缺失令民心冷淡](/articles/voa/1014276.md)
+
 7-9 [俄罗斯向乌克兰全境发动猛烈导弹袭击，死伤180多人，并击中基辅一家儿童医院，泽连斯基誓言以牙还牙](/articles/voa/1014277.md)
 
 7-9 [油罐车既运煤制油又运食用油，中国官媒沉默数天后批中储粮形同投毒](/articles/voa/1014278.md)
@@ -594,10 +600,4 @@
 6-26 [韩国军方称朝鲜试射的导弹在空中爆炸](/articles/voa/1014572.md)
 
 6-26 [美国奥运游泳金牌得主告诉国会：已不再信任世界反兴奋剂机构](/articles/voa/1014573.md)
-
-6-26 [韩国：朝鲜似乎进行了一次失败的导弹发射](/articles/voa/1014574.md)
-
-6-26 [2024环太军演即将登场 ,“击沉”演习将瞄准中国两栖攻击舰？](/articles/voa/1014575.md)
-
-6-26 [中国抗议欧盟制裁与俄罗斯战争有关系的公司](/articles/voa/1014576.md)
 
