--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+7-9 [美国不预计伊朗在新总统领导下会改变政策](/articles/voa/1014264.md)
+
+7-9 [乌克兰战争持续之际，中国和白俄罗斯开始联合反恐演习](/articles/voa/1014265.md)
+
+7-9 [拜登将于周三在白宫会晤英国新首相斯塔默](/articles/voa/1014266.md)
+
+7-9 [伊朗当选总统重申对以色列的政策](/articles/voa/1014267.md)
+
+7-9 [俄军发动大规模导弹袭击，基辅儿童医院被击中；拜登总统发声明谴责俄罗斯“残暴”](/articles/voa/1014268.md)
+
 7-9 [法国混乱的选举之后，总统马克龙要求总理留任以利“国家稳定”](/articles/voa/1014269.md)
 
 7-9 [太平洋岛国领导人在地区竞争加剧时访问中国](/articles/voa/1014270.md)
@@ -590,14 +600,4 @@
 6-26 [分析：中国软硬兼施不计代价避免与美欧展开双重贸易战](/articles/voa/1014562.md)
 
 6-26 [荷兰首相马克·吕特确定出任北约新秘书长 其强烈挺乌抗俄立场引关注](/articles/voa/1014563.md)
-
-6-26 [美大使批北京阻挠双边人文交流，北京称“不符合事实”](/articles/voa/1014564.md)
-
-6-26 [华北雁塘：悲观的中国：中共“二十大三中全会”前夕观察](/articles/voa/1014565.md)
-
-6-26 [中国再对台实施“联合战备警巡”北京誓言追捕“台独顽固分子”](/articles/voa/1014566.md)
-
-6-26 [发生重大火灾的韩国电池厂被勒令停工](/articles/voa/1014567.md)
-
-6-26 [十对香港同性伴侣通过视频在美国结婚](/articles/voa/1014568.md)
 
