--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-9 [《私人革命》：“社会新秩序”下四位中国女性的命运](/articles/nyt/1042602.md)
+
 7-9 [匈牙利总理欧尔班访华，或加剧欧盟对其不满](/articles/nyt/1042603.md)
 
 7-8 [诺奖得主门罗之女称曾遭继父性侵，指母亲置之不理](/articles/nyt/1042604.md)
@@ -598,6 +600,4 @@
 4-1 [“23条”立法通过后，自由亚洲电台撤离香港](/articles/nyt/1042900.md)
 
 3-29 [俄安全机构为何未能阻止莫斯科音乐厅恐袭发生](/articles/nyt/1042901.md)
-
-3-29 [台湾外长：美国是否继续军援乌克兰对台海局势意义重大](/articles/nyt/1042902.md)
 
