--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-9 [北约盟国在拜登政治前途未卜的阴云下举行峰会](/articles/voa/1014262.md)
+
+7-9 [“对抗以中国为首的轴心” 美国会众议院议长：将推动全面抗中法案](/articles/voa/1014263.md)
+
 7-9 [美国不预计伊朗在新总统领导下会改变政策](/articles/voa/1014264.md)
 
 7-9 [乌克兰战争持续之际，中国和白俄罗斯开始联合反恐演习](/articles/voa/1014265.md)
@@ -596,8 +600,4 @@
 6-27 [欧盟同意制裁白俄罗斯，堵住俄罗斯逃避制裁的一大漏洞](/articles/voa/1014560.md)
 
 6-26 [尼尔森公司：美国将在巴黎奥运上夺得最多奖牌，金牌榜或与中国有一拼](/articles/voa/1014561.md)
-
-6-26 [分析：中国软硬兼施不计代价避免与美欧展开双重贸易战](/articles/voa/1014562.md)
-
-6-26 [荷兰首相马克·吕特确定出任北约新秘书长 其强烈挺乌抗俄立场引关注](/articles/voa/1014563.md)
 
