--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-9 [美国推进“芯片外交”：重塑全球供应链，减少对华依赖](/articles/nyt/1042601.md)
+
 7-9 [《私人革命》：“社会新秩序”下四位中国女性的命运](/articles/nyt/1042602.md)
 
 7-9 [匈牙利总理欧尔班访华，或加剧欧盟对其不满](/articles/nyt/1042603.md)
@@ -598,6 +600,4 @@
 4-1 [“到处都走捷径”：波音是如何将乘客置于危险之中的](/articles/nyt/1042899.md)
 
 4-1 [“23条”立法通过后，自由亚洲电台撤离香港](/articles/nyt/1042900.md)
-
-3-29 [俄安全机构为何未能阻止莫斯科音乐厅恐袭发生](/articles/nyt/1042901.md)
 
