--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-9 [【404文库】建设性意见｜洪水来了，是堵住大堤重要，还是堵人们的嘴重要？](/articles/cdt/339048.md)
+
 7-8 [每日一语 2024.7.8](/articles/cdt/339055.md)
 
 7-8 [【异闻观止】特斯拉进入江苏省政府用车采购目录 工作人员：特斯拉属于国产](/articles/cdt/339057.md)
@@ -598,6 +600,4 @@
 6-1 [老萧杂说｜请拿出正视跳桥跳楼问题的勇气](/articles/cdt/340187.md)
 
 6-1 [每日一语 2024.5.30](/articles/cdt/340192.md)
-
-6-1 [【404文库】“我们原以为，互联网是有记忆的，但没有想到，这种记忆，原来是像金鱼一样的记忆”（外二篇）](/articles/cdt/340194.md)
 
