--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-9 [人民路56号｜调查记者都快灭绝了，我们还吃不上一口放心油](/articles/cdt/339042.md)
+
 7-9 [【404文库】建设性意见｜洪水来了，是堵住大堤重要，还是堵人们的嘴重要？](/articles/cdt/339048.md)
 
 7-8 [每日一语 2024.7.8](/articles/cdt/339055.md)
@@ -598,6 +600,4 @@
 6-1 [不器是一种态度｜上海某保安同志禁止“宣传”外国诗歌](/articles/cdt/340184.md)
 
 6-1 [老萧杂说｜请拿出正视跳桥跳楼问题的勇气](/articles/cdt/340187.md)
-
-6-1 [每日一语 2024.5.30](/articles/cdt/340192.md)
 
