--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-9 [台湾年度汉光演习前 赖清德表示军事上以少胜多案例比比皆是](/articles/voa/1014256.md)
+
 7-9 [为抗衡中国北约与亚太伙伴在美国领导下加强合作](/articles/voa/1014257.md)
 
 7-9 [国际社会谴责俄罗斯袭击乌克兰之际莫迪将与普京会谈](/articles/voa/1014258.md)
@@ -598,6 +600,4 @@
 6-27 [拜登赦免因同性性行为而被美军定罪的退伍军人](/articles/voa/1014554.md)
 
 6-27 [中国富豪新加坡设家办 洗钱风波冲击有限](/articles/voa/1014555.md)
-
-6-27 [世界媒体看中国 - 电动汽车与贸易形势](/articles/voa/1014556.md)
 
