--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-9 [法国右翼领衔“欧洲爱国者联盟”](/articles/dw/1024945.md)
+
+7-9 [日本决心加强与北约及其伙伴的合作](/articles/dw/1024946.md)
+
+7-9 [欧美驻华大使：同中国民间交流为什么这么难？](/articles/dw/1024947.md)
+
 7-9 [北约峰会彰显实力　欧美政局均有挑战](/articles/dw/1024948.md)
 
 7-9 [一举多得！比亚迪在土耳其设厂](/articles/dw/1024949.md)
@@ -594,10 +600,4 @@
 6-13 [长平观察：地球照常升起](/articles/dw/1025243.md)
 
 6-13 [美副国务卿：相信北京集中精力搞经济、想稳定对美关系](/articles/dw/1025244.md)
-
-6-13 [欧盟“棒打”中国电动车 中国拿什么报复？](/articles/dw/1025245.md)
-
-6-13 [马克龙呼吁选民拒绝“极端主义”](/articles/dw/1025246.md)
-
-6-13 [歐企不挺對中加關稅 食品業憂成北京報復對象](/articles/dw/1025247.md)
 
