--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-9 [岸田文雄：日本必须强化与北约关系以确保全球和平](/articles/voa/1014254.md)
+
 7-9 [AI需求旺盛，台湾6月出口优于预期，对美增幅高达74.2%](/articles/voa/1014255.md)
 
 7-9 [台湾年度汉光演习前 赖清德表示军事上以少胜多案例比比皆是](/articles/voa/1014256.md)
@@ -598,6 +600,4 @@
 6-27 [斯里兰卡同中国法国等双边债权国达成债务重组协议](/articles/voa/1014552.md)
 
 6-27 [加拿大反外国干预法对华人有何影响?](/articles/voa/1014553.md)
-
-6-27 [拜登赦免因同性性行为而被美军定罪的退伍军人](/articles/voa/1014554.md)
 
