--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-9 [台湾汉光40号军演在即 验证新“交战规则”](/articles/voa/1014252.md)
+
+7-9 [乌全国哀悼俄军导弹袭击罹难者，乌各方为重建遇袭儿童医院捐款](/articles/voa/1014253.md)
+
 7-9 [岸田文雄：日本必须强化与北约关系以确保全球和平](/articles/voa/1014254.md)
 
 7-9 [AI需求旺盛，台湾6月出口优于预期，对美增幅高达74.2%](/articles/voa/1014255.md)
@@ -596,8 +600,4 @@
 6-27 [警方：中国人用豪华轿车偷渡意大利](/articles/voa/1014550.md)
 
 6-27 [中国造北约制式重炮亮相巴黎，引起西方警觉](/articles/voa/1014551.md)
-
-6-27 [斯里兰卡同中国法国等双边债权国达成债务重组协议](/articles/voa/1014552.md)
-
-6-27 [加拿大反外国干预法对华人有何影响?](/articles/voa/1014553.md)
 
