--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-10 [【网络民议】洞庭湖大堤决口合龙，救灾现场变表演舞台](/articles/cdt/339036.md)
+
 7-9 [六神磊磊读金庸｜​这油，我从小喝到大](/articles/cdt/339038.md)
 
 7-9 [人民路56号｜调查记者都快灭绝了，我们还吃不上一口放心油](/articles/cdt/339042.md)
@@ -598,6 +600,4 @@
 6-1 [海涛评论｜全椒翻车事件：看似信口开河，或是能力退化](/articles/cdt/340177.md)
 
 6-1 [魏春亮说｜吐槽嘉峪关的选调生，到底犯了多大的罪？](/articles/cdt/340181.md)
-
-6-1 [不器是一种态度｜上海某保安同志禁止“宣传”外国诗歌](/articles/cdt/340184.md)
 
