--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-10 [中国陆军首次进入欧洲腹地，搅局俄乌战争还是威慑北约?](/articles/voa/1014246.md)
+
 7-10 [菲律宾反驳北京指责，说中国大举填海造岛对珊瑚礁造成严重破坏](/articles/voa/1014247.md)
 
 7-10 [多地调整城管编制 惠及小摊贩为三中全会造势？](/articles/voa/1014248.md)
@@ -598,6 +600,4 @@
 6-27 [中国“惩治台独”新规引发国会两党反弹,美议员：中共在煽动不稳定](/articles/voa/1014544.md)
 
 6-27 [美国发表《2023年国际宗教自由报告》，批评中国压制宗教自由](/articles/voa/1014545.md)
-
-6-27 [维基解密创始人阿桑奇激动地返回故土](/articles/voa/1014546.md)
 
