--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-10 [英国工党政府将如何调整对华政策？](/articles/voa/1014239.md)
+
+7-10 [美国将铝、聚氯乙烯和海鲜列为《防止强迫维吾尔人劳动法》执法新重点](/articles/voa/1014240.md)
+
 7-10 [北约讨论抗击虚假信息之际 中国指控美国及其盟友制造虚假信息](/articles/voa/1014241.md)
 
 7-10 [真主党说，以色列攻击叙利亚打死该组织领导人的前保镖](/articles/voa/1014242.md)
@@ -596,8 +600,4 @@
 6-27 [法国议会选举前夕欧盟将就主要领导职位人选达成协议](/articles/voa/1014537.md)
 
 6-27 [中共二十届三中全会定于7月15日至18日召开](/articles/voa/1014538.md)
-
-6-27 [朝鲜声称成功试射多弹头导弹 韩国称其为“谎言”](/articles/voa/1014539.md)
-
-6-27 [小马科斯：菲律宾需要“做更多”而不只是抗议中国在南中国海的行动](/articles/voa/1014540.md)
 
