--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-10 [智谷趋势｜“5个记者顶100个市场监管局！”为什么需要调查记者，这是最好的答案](/articles/cdt/339009.md)
+
+7-10 [维舟｜食用油面前人人平等](/articles/cdt/339011.md)
+
+7-10 [天涯行路｜​那个罐子是洗不洗的问题吗，洗了也不能装食用油吧？](/articles/cdt/339012.md)
+
 7-10 [【网络民议】洞庭湖大堤决口合龙，救灾现场变表演舞台](/articles/cdt/339036.md)
 
 7-9 [六神磊磊读金庸｜​这油，我从小喝到大](/articles/cdt/339038.md)
@@ -594,10 +600,4 @@
 6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（一）](/articles/cdt/340166.md)
 
 6-2 [【CDT周报】第172期：“主因是什么”创作出超越苏联笑话的作品](/articles/cdt/340168.md)
-
-6-1 [每日一语 2024.5.31](/articles/cdt/340171.md)
-
-6-1 [海涛评论｜全椒翻车事件：看似信口开河，或是能力退化](/articles/cdt/340177.md)
-
-6-1 [魏春亮说｜吐槽嘉峪关的选调生，到底犯了多大的罪？](/articles/cdt/340181.md)
 
