--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-10 [美国选情为北约峰会蒙上阴影，成员国如何克服信心危机？](/articles/nyt/1042599.md)
+
 7-9 [日元“难以承受之低”：日本军费怎么办？](/articles/nyt/1042600.md)
 
 7-9 [美国推进“芯片外交”：重塑全球供应链，减少对华依赖](/articles/nyt/1042601.md)
@@ -598,6 +600,4 @@
 4-1 [马英九访问中国大陆，或将与习近平会面](/articles/nyt/1042897.md)
 
 4-1 [拜登的强硬立场令中国愤怒，这说明他做对了](/articles/nyt/1042898.md)
-
-4-1 [“到处都走捷径”：波音是如何将乘客置于危险之中的](/articles/nyt/1042899.md)
 
