--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-10 [拜登赢得资深民主党议员支持，但疑虑仍然存在](/articles/voa/1014228.md)
+
 7-10 [乌克兰在华盛顿开设武器办公室](/articles/voa/1014229.md)
 
 7-10 [“每一次纪念709，都是对他们（中共政权）的一次警告”](/articles/voa/1014230.md)
@@ -598,6 +600,4 @@
 6-28 [中国海上挑衅被视为对美菲联盟的考验](/articles/voa/1014526.md)
 
 6-28 [中国C919客机接近欧洲认证，潜在风险引发关注](/articles/voa/1014527.md)
-
-6-28 [白宫重申美国对美菲安保条约的承诺“铁一般坚定”](/articles/voa/1014528.md)
 
