--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-10 [每日一语 2024.7.9](/articles/cdt/339004.md)
+
 7-10 [智谷趋势｜“5个记者顶100个市场监管局！”为什么需要调查记者，这是最好的答案](/articles/cdt/339009.md)
 
 7-10 [维舟｜食用油面前人人平等](/articles/cdt/339011.md)
@@ -598,6 +600,4 @@
 6-1 [西坡原创｜网友不许励志，官方不许躺平](/articles/cdt/340159.md)
 
 6-4 [【CDT报告汇·六四35周年】中国数字时代创始人萧强：六四开枪后放弃美国博士学业回北京的逆行者｜技术反网络审查逆权二十年](/articles/cdt/340165.md)
-
-6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（一）](/articles/cdt/340166.md)
 
