--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-10 [莫迪访问俄罗斯，彰显西方孤立普京策略失败](/articles/nyt/1042596.md)
+
 7-10 [如何挽回一场失败的辩论？拜登团队的疯狂48小时](/articles/nyt/1042597.md)
 
 7-10 [中国游泳队禁药丑闻：世界反兴奋剂机构称其自身无过错](/articles/nyt/1042598.md)
@@ -598,6 +600,4 @@
 4-2 [《奥本海默》在日本上映，引发争议与反思](/articles/nyt/1042894.md)
 
 4-2 [林奇之死：网飞《三体》背后的离奇投毒案](/articles/nyt/1042895.md)
-
-4-2 [中国水军假冒特朗普支持者，试图影响美国大选](/articles/nyt/1042896.md)
 
