--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-10 [微软给员工发iPhone 办公只能用苹果](/articles/dw/1024941.md)
+
 7-9 [莫迪会晤普京 强调双方是朋友](/articles/dw/1024942.md)
 
 7-9 [客座评论：欧陆向右，英国向左？](/articles/dw/1024943.md)
@@ -598,6 +600,4 @@
 6-13 [拒绝执行欧盟难民政策 匈牙利被罚重金](/articles/dw/1025239.md)
 
 6-13 [“魔鬼辣”会导致急性中毒 丹麦召回韩国爆辣火鸡面](/articles/dw/1025240.md)
-
-6-13 [美国会通过法案 质疑“西藏自古以来属于中国”](/articles/dw/1025241.md)
 
