--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-10 [在忧虑加剧之际北约领导人寻求加大对乌克兰的支持](/articles/voa/1014225.md)
+
 7-10 [中国需求疲软，6月份消费者通胀率不及预期](/articles/voa/1014226.md)
 
 7-10 [台军方称解放军航母经菲律宾北部巴林塘海峡前往西太平洋演训](/articles/voa/1014227.md)
@@ -598,6 +600,4 @@
 6-28 [外国对华投资连续十二个月下跌，中国创业者叹融资难](/articles/voa/1014523.md)
 
 6-28 [也门胡塞武装使用无人驾驶船只在红海发动袭击](/articles/voa/1014524.md)
-
-6-28 [拜登和特朗普大选今晚首辩，中国议题怎么谈？](/articles/voa/1014525.md)
 
