--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-10 [中国产电动汽车主导以色列市场](/articles/dw/1024940.md)
+
 7-10 [微软给员工发iPhone 办公只能用苹果](/articles/dw/1024941.md)
 
 7-9 [莫迪会晤普京 强调双方是朋友](/articles/dw/1024942.md)
@@ -598,6 +600,4 @@
 6-14 [杯葛瑞士和平峰會？傳中國私下力推北京方案](/articles/dw/1025238.md)
 
 6-13 [拒绝执行欧盟难民政策 匈牙利被罚重金](/articles/dw/1025239.md)
-
-6-13 [“魔鬼辣”会导致急性中毒 丹麦召回韩国爆辣火鸡面](/articles/dw/1025240.md)
 
