--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-10 [知灼｜“罐车混装食用油”事件，开始“毁尸灭迹”了](/articles/cdt/338999.md)
+
+7-10 [老萧杂说｜“油瓶子”微小叙事，已被堂皇激昂的宏大叙事收编](/articles/cdt/339001.md)
+
 7-10 [每日一语 2024.7.9](/articles/cdt/339004.md)
 
 7-10 [智谷趋势｜“5个记者顶100个市场监管局！”为什么需要调查记者，这是最好的答案](/articles/cdt/339009.md)
@@ -596,8 +600,4 @@
 6-1 [时代论坛｜站在历史记忆的肩膀上祷告](/articles/cdt/340150.md)
 
 6-1 [凤羽财经｜儿童节朝气蓬勃老年人和垂头丧气年轻人](/articles/cdt/340156.md)
-
-6-1 [西坡原创｜网友不许励志，官方不许躺平](/articles/cdt/340159.md)
-
-6-4 [【CDT报告汇·六四35周年】中国数字时代创始人萧强：六四开枪后放弃美国博士学业回北京的逆行者｜技术反网络审查逆权二十年](/articles/cdt/340165.md)
 
