--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-10 [佩泽希齐扬 - 没有实权的伊朗新总统](/articles/dw/1024938.md)
+
+7-10 [莫迪在莫斯科间接批评战争](/articles/dw/1024939.md)
+
 7-10 [中国产电动汽车主导以色列市场](/articles/dw/1024940.md)
 
 7-10 [微软给员工发iPhone 办公只能用苹果](/articles/dw/1024941.md)
@@ -596,8 +600,4 @@
 6-14 [李強重牽中澳友誼小手 專家：欲破美國圍堵](/articles/dw/1025236.md)
 
 6-14 [李強重牽澳洲友誼小手 專家：欲破美國圍堵](/articles/dw/1025237.md)
-
-6-14 [杯葛瑞士和平峰會？傳中國私下力推北京方案](/articles/dw/1025238.md)
-
-6-13 [拒绝执行欧盟难民政策 匈牙利被罚重金](/articles/dw/1025239.md)
 
