--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-10 [世界媒体看中国：中共三中全会有何名堂](/articles/voa/1014219.md)
+
+7-10 [北京推出专家报告：斯卡伯勒浅滩水域没有海水污染](/articles/voa/1014220.md)
+
+7-10 [中国欧盟贸易战升级，北京就欧盟调查中国企业进行反调查](/articles/voa/1014221.md)
+
+7-10 [美墨宣布针对中国钢铝不公平贸易行为采取联合行动](/articles/voa/1014222.md)
+
 7-10 [外籍旅客入境中国观光回温？ 分析：旅游安全、健康顾虑和观光品质是硬伤](/articles/voa/1014223.md)
 
 7-10 [中国加大军事威胁之际，AIT新处长承诺协助台湾自卫](/articles/voa/1014224.md)
@@ -592,12 +600,4 @@
 6-28 [拜登与特朗普的首场电视辩论在美国社媒上引起担忧与失望](/articles/voa/1014517.md)
 
 6-28 [美亚太助卿康达担忧中国“惩治台独”新规将引发寒蝉效应](/articles/voa/1014518.md)
-
-6-28 [拜登与特朗普的首场辩论主要辩论了什么？](/articles/voa/1014519.md)
-
-6-28 [路易斯安那州法律引发关于公立学校展示“十诫”的争论](/articles/voa/1014520.md)
-
-6-28 [俄朝关系趋于密切或为美中两国创造机会](/articles/voa/1014521.md)
-
-6-28 [“失去的十年”：专家解读华盛顿为何未能充分回应中国崛起](/articles/voa/1014522.md)
 
