--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-10 [李海鹏｜梦中的新闻业和真实的新闻业](/articles/cdt/338995.md)
+
 7-10 [知灼｜“罐车混装食用油”事件，开始“毁尸灭迹”了](/articles/cdt/338999.md)
 
 7-10 [老萧杂说｜“油瓶子”微小叙事，已被堂皇激昂的宏大叙事收编](/articles/cdt/339001.md)
@@ -598,6 +600,4 @@
 6-2 [青少年生命复元｜儿童节成“儿童劫”：当代孩子的快乐，早就被献祭了](/articles/cdt/340146.md)
 
 6-1 [时代论坛｜站在历史记忆的肩膀上祷告](/articles/cdt/340150.md)
-
-6-1 [凤羽财经｜儿童节朝气蓬勃老年人和垂头丧气年轻人](/articles/cdt/340156.md)
 
