--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-10 [泽连斯基重返国会山拜会两党议员，感谢美对乌支援](/articles/voa/1014218.md)
+
 7-10 [世界媒体看中国：中共三中全会有何名堂](/articles/voa/1014219.md)
 
 7-10 [北京推出专家报告：斯卡伯勒浅滩水域没有海水污染](/articles/voa/1014220.md)
@@ -598,6 +600,4 @@
 6-28 [欧盟通过新领导层人选 冯德莱恩再获欧盟委员会主席提名](/articles/voa/1014516.md)
 
 6-28 [拜登与特朗普的首场电视辩论在美国社媒上引起担忧与失望](/articles/voa/1014517.md)
-
-6-28 [美亚太助卿康达担忧中国“惩治台独”新规将引发寒蝉效应](/articles/voa/1014518.md)
 
