--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-11 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024936.md)
+
 7-10 [中国泳队涉禁药事件调查：结果公布仍被质疑](/articles/dw/1024937.md)
 
 7-10 [佩泽希齐扬 - 没有实权的伊朗新总统](/articles/dw/1024938.md)
@@ -598,6 +600,4 @@
 6-14 [G7将利用被冻结的俄资产利息作为担保向乌克兰放贷500亿](/articles/dw/1025234.md)
 
 6-14 [欧盟盟歌——贝多芬欢乐颂](/articles/dw/1025235.md)
-
-6-14 [李強重牽中澳友誼小手 專家：欲破美國圍堵](/articles/dw/1025236.md)
 
