--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-11 [印度加快边境水电站建设，北京：印度无权在藏南开发](/articles/voa/1014215.md)
+
 7-11 [众议院外委会举行听证会，重点关注美国国际广播机构的政策、预算和人事问题](/articles/voa/1014216.md)
 
 7-10 [菲空军抵澳参加多国军演，澳准将：做好应对最坏情况的准备](/articles/voa/1014217.md)
@@ -598,6 +600,4 @@
 6-28 [习近平发表讲话呼吁在贸易和外交摩擦中架设“桥梁”](/articles/voa/1014513.md)
 
 6-28 [坎贝尔与马朝旭通话：就中国在南中国海的行为表示严重关切](/articles/voa/1014514.md)
-
-6-28 [勇救日本母子的苏州女子伤重身亡](/articles/voa/1014515.md)
 
