--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-11 [路透社：德国将在2029年前将中国技术和零部件从其5G网络中移除](/articles/voa/1014212.md)
+
+7-11 [中国汽车出口激增，部分抵消了国内销量的下滑](/articles/voa/1014213.md)
+
 7-11 [太平洋变练兵场: 中俄和美日等国同时军演，航母和隐形军舰一齐现身](/articles/voa/1014214.md)
 
 7-11 [印度加快边境水电站建设，北京：印度无权在藏南开发](/articles/voa/1014215.md)
@@ -596,8 +600,4 @@
 6-28 [赖清德视察新兵训练强调捍卫民主自由，指台海和平有利于世界和平](/articles/voa/1014510.md)
 
 6-28 [印尼将驱逐在巴厘岛涉嫌网络诈骗的台湾人](/articles/voa/1014511.md)
-
-6-28 [日本和菲律宾将在马尼拉举行外交国防“2+2”会谈](/articles/voa/1014512.md)
-
-6-28 [习近平发表讲话呼吁在贸易和外交摩擦中架设“桥梁”](/articles/voa/1014513.md)
 
