--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-11 [岸田文雄决心加强与北约的合作，向中国释放什么信号？](/articles/voa/1014210.md)
+
+7-11 [以色列军方在加沙城发布疏散令](/articles/voa/1014211.md)
+
 7-11 [路透社：德国将在2029年前将中国技术和零部件从其5G网络中移除](/articles/voa/1014212.md)
 
 7-11 [中国汽车出口激增，部分抵消了国内销量的下滑](/articles/voa/1014213.md)
@@ -596,8 +600,4 @@
 6-28 [基辅推动北约在乌西部设立禁飞区保护能源基础设施](/articles/voa/1014508.md)
 
 6-28 [北京呼吁美国停止支持菲律宾“挑衅”，美国对中国行为表示“严重关切”](/articles/voa/1014509.md)
-
-6-28 [赖清德视察新兵训练强调捍卫民主自由，指台海和平有利于世界和平](/articles/voa/1014510.md)
-
-6-28 [印尼将驱逐在巴厘岛涉嫌网络诈骗的台湾人](/articles/voa/1014511.md)
 
