--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-11 [中国流亡商人郭文贵欺诈案进入结案陈词阶段](/articles/voa/1014200.md)
+
 7-11 [专家：未确定谁是可信任交流对象前北京将维持对台北的强硬姿态](/articles/voa/1014201.md)
 
 7-11 [北约：乌克兰入盟的道路“不可逆转”](/articles/voa/1014202.md)
@@ -598,6 +600,4 @@
 6-29 [中国女子救两名日本人后身亡，引发社媒哀悼和对民族主义的谴责](/articles/voa/1014498.md)
 
 6-29 [斯洛文尼亚总统访问基辅；俄军就美国无人机在黑海飞行发出警告](/articles/voa/1014499.md)
-
-6-29 [孟加拉总理即将访华 平衡中印外交](/articles/voa/1014500.md)
 
