--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-12 [俄副外长称莫斯科不会参加第二次乌克兰和平峰会](/articles/voa/1014185.md)
+
+7-12 [美德在德部署远程导弹决定激怒莫斯科，声称将进行反制](/articles/voa/1014186.md)
+
+7-12 [奇迹：中国女子在日本海滨游泳被海浪卷走，37小时后在80公里外获救](/articles/voa/1014187.md)
+
+7-12 [中共三中全会前夕截访频传，访民:不解决问题，只解决提出问题的人](/articles/voa/1014188.md)
+
 7-11 [中国自动驾驶出租车受乘客青睐上热搜，但抢人饭碗惹争议](/articles/voa/1014189.md)
 
 7-11 [北约宣言指中国是俄乌战争“决定性助推者”，中国外交部反呛“甩锅嫁祸”](/articles/voa/1014190.md)
@@ -592,12 +600,4 @@
 6-29 [普京：俄罗斯可能恢复中程导弹的全球部署](/articles/voa/1014483.md)
 
 6-29 [人权组织:肯尼亚反政府抗议导致至少30人死亡](/articles/voa/1014484.md)
-
-6-29 [路透独家：美国自加沙战争爆发以来已向以色列运送数千枚2000磅炸弹](/articles/voa/1014485.md)
-
-6-29 [中国与秘鲁双边自贸协定将升级](/articles/voa/1014486.md)
-
-6-29 [死刑威胁笼罩下 中国称台湾人来旅游可“乘兴”](/articles/voa/1014487.md)
-
-6-29 [澳大利亚外交官称增加AUKUS合作伙伴是“复杂的](/articles/voa/1014488.md)
 
