--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-12 [加拿大按北约指标增加军费支出 对抗中国俄罗斯](/articles/voa/1014182.md)
+
 7-12 [香港特首李家超上任两年经济表现疲弱 学者分析制度转变失国际竞争力](/articles/voa/1014183.md)
 
 7-12 [美网络安全企业反驳中国官媒有关美企受政府操控的指控“毫无根据”](/articles/voa/1014184.md)
@@ -598,6 +600,4 @@
 6-29 [专访胡平：从一党到一人 习近平如何登上专制巅峰？](/articles/voa/1014480.md)
 
 6-29 [世界媒体看中国 - 两个前防长一道被开除](/articles/voa/1014481.md)
-
-6-29 [华为卷土重来？分析人士：中共不会让华为死掉](/articles/voa/1014482.md)
 
