--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-12 [推特上的中国：北约指中国是俄乌战争的“决定性助推者”中国“骑墙”企图失败？](/articles/voa/1014180.md)
+
+7-12 [美加芬三国宣布联合建造破冰船队在极地对抗中俄](/articles/voa/1014181.md)
+
 7-12 [加拿大按北约指标增加军费支出 对抗中国俄罗斯](/articles/voa/1014182.md)
 
 7-12 [香港特首李家超上任两年经济表现疲弱 学者分析制度转变失国际竞争力](/articles/voa/1014183.md)
@@ -596,8 +600,4 @@
 6-29 [俄乌战争僵持依旧，泽连斯基筹划“全面计划”结束战争](/articles/voa/1014478.md)
 
 6-29 [伊朗总统大选即将进入第二轮投票，改革派与保守派候选人一争输赢](/articles/voa/1014479.md)
-
-6-29 [专访胡平：从一党到一人 习近平如何登上专制巅峰？](/articles/voa/1014480.md)
-
-6-29 [世界媒体看中国 - 两个前防长一道被开除](/articles/voa/1014481.md)
 
