--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-12 [德国将弃用华为和中兴部件参与5G网络建设](/articles/nyt/1042591.md)
+
 7-11 [中印边境争端：为何两国因“不毛之地”纷争不休](/articles/nyt/1042592.md)
 
 7-11 [我爱拜登，但他是时候退出了](/articles/nyt/1042593.md)
@@ -598,6 +600,4 @@
 4-3 [工业化奇迹不再，发展中国家需要新的致富指南](/articles/nyt/1042889.md)
 
 4-3 [美国财长耶伦将再次访华，进行高级别会谈](/articles/nyt/1042890.md)
-
-4-3 [拜登与习近平通话，谈及台湾、贸易、TikTok等问题](/articles/nyt/1042891.md)
 
