--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-12 [敲定「两步走」！德国将从移动网络中移除中国部件](/articles/dw/1024927.md)
+
 7-11 [中国军舰现身阿拉斯加近海 美军：符合常规](/articles/dw/1024928.md)
 
 7-11 [俄罗斯石油助力印度经济](/articles/dw/1024929.md)
@@ -598,6 +600,4 @@
 6-15 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025225.md)
 
 6-15 [乌克兰和平峰会在瑞士举行：和平希望渺茫](/articles/dw/1025226.md)
-
-6-14 [教宗会见百名喜剧界人士 赞许幽默](/articles/dw/1025227.md)
 
