--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-12 [专访日本内阁广报官小林麻纪：日本加深与北约合作，但无意建立打造亚洲版北约](/articles/voa/1014171.md)
+
 7-12 [拜登警告习近平：助长俄乌战争将付出代价](/articles/voa/1014172.md)
 
 7-12 [世卫组织：禽流感风险评估因监测有限而受阻](/articles/voa/1014173.md)
@@ -598,6 +600,4 @@
 6-30 [朝鲜批评美日韩联合军演为“亚洲版北约” 警告将招来“致命性后果](/articles/voa/1014469.md)
 
 6-30 [法国举行首轮议会选举 极右翼势力可能入主政府](/articles/voa/1014470.md)
-
-6-30 [中国发布稀土管理法规 谋求牢牢掌控战略资源](/articles/voa/1014471.md)
 
