--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-12 [日本護衛艦「誤入」中國領海？北京要求徹查](/articles/dw/1024925.md)
+
 7-12 [客座評論：英美大選對中港的諷刺](/articles/dw/1024926.md)
 
 7-12 [敲定「两步走」！德国将从移动网络中移除中国部件](/articles/dw/1024927.md)
@@ -598,6 +600,4 @@
 6-15 [欧洲杯拉开帷幕 德国队迎来“开门红”](/articles/dw/1025223.md)
 
 6-15 [德国企业第一季度破产数量激增](/articles/dw/1025224.md)
-
-6-15 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025225.md)
 
