--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-12 [南中国海仲裁八周年，菲律宾誓言将坚守立场](/articles/voa/1014168.md)
+
 7-12 [日本《防卫白皮书》警告中国在台湾周边的军演将加剧紧张局势](/articles/voa/1014169.md)
 
 7-12 [北京就欧盟南中国海仲裁声明表示不满](/articles/voa/1014170.md)
@@ -598,6 +600,4 @@
 6-30 [印尼将对中国商品征收最高200%进口关税](/articles/voa/1014466.md)
 
 6-30 [中共党员总数逼近亿人 净增人数连两年下滑](/articles/voa/1014467.md)
-
-6-30 [中国6月份制造业活动连续第二个月萎缩](/articles/voa/1014468.md)
 
