--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-12 [“谁说我必输无疑？”拜登姿态坚决，拒不退选](/articles/nyt/1042586.md)
+
 7-12 [郭文贵命运等待陪审团裁决，涉嫌诈骗10亿美元](/articles/nyt/1042587.md)
 
 7-12 [美国将对在中国制造的墨西哥金属征收关税](/articles/nyt/1042588.md)
@@ -598,6 +600,4 @@
 4-8 [耶伦再访华，敦促中国解决绿色能源出口过剩问题](/articles/nyt/1042884.md)
 
 4-8 [强震后建筑屹立不倒、人员伤亡较低：台湾是如何做到的](/articles/nyt/1042885.md)
-
-4-8 [关税、制裁、跨境投资：盘点耶伦访华之际中美争议性问题](/articles/nyt/1042886.md)
 
