--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-12 [德语媒体：禁用华为5G是否明智？](/articles/dw/1024916.md)
+
+7-12 [德国总理：在德国部署远程导弹是一项“很好的决定”](/articles/dw/1024917.md)
+
+7-12 [媒体报中国在塔吉克斯坦建设秘密军事基地 北京否认](/articles/dw/1024918.md)
+
+7-12 [北约迎来75周年：问题多多 何去何从](/articles/dw/1024919.md)
+
 7-12 [三中全会将如何为中国经济“指明方向“？](/articles/dw/1024920.md)
 
 7-12 [不同寻常！小红书传获海外风投公司投资](/articles/dw/1024921.md)
@@ -592,12 +600,4 @@
 6-15 [时隔七年再访澳 李强称中澳关系重回正轨](/articles/dw/1025214.md)
 
 6-15 [菲律宾向联合国申请扩展南中国海大陆架](/articles/dw/1025215.md)
-
-6-15 [调高对华关税？美商业团体寻求公开听证会](/articles/dw/1025216.md)
-
-6-15 [德国义务兵役制讨论再起](/articles/dw/1025217.md)
-
-6-15 [分析：利用冻结俄资产利息援乌方案行得通吗？](/articles/dw/1025218.md)
-
-6-15 [泽连斯基：乌克兰和平峰会将见证历史产生](/articles/dw/1025219.md)
 
