--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-12 [习近平、李强分别会晤所罗门群岛总理，两国走近让美国及其太平洋盟友担忧](/articles/voa/1014161.md)
+
+7-12 [中国与白俄罗斯联演秀 分析：伤害性不大，但污辱性极强](/articles/voa/1014162.md)
+
 7-12 [中国六月进出口数据凸显产销反差加大，贸易冲突将日趋激烈](/articles/voa/1014163.md)
 
 7-12 [去除威权崇拜，台湾国军仪队礼兵撤离中正纪念堂铜像大厅](/articles/voa/1014164.md)
@@ -596,8 +600,4 @@
 7-1 [韩国：朝鲜在其东海岸发射了一枚弹道导弹](/articles/voa/1014459.md)
 
 7-1 [内塔尼亚胡在停火谈判停滞时誓言“胜利”](/articles/voa/1014460.md)
-
-7-1 [中国天龙三号大型运载火箭一子级动力系统静态试车意外升空并爆炸](/articles/voa/1014461.md)
-
-6-30 [俄军对乌克兰南部发动导弹袭击，导致7死36伤惨剧](/articles/voa/1014462.md)
 
