--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-13 [应对中国经济胁迫 日德建立新经济安全框架](/articles/voa/1014140.md)
+
+7-13 [朝鲜“最强烈地谴责”北约峰会宣言](/articles/voa/1014141.md)
+
 7-13 [欧盟将在COP29就遏制化石燃料的协议推动后续措施](/articles/voa/1014142.md)
 
 7-13 [伊朗总统当选人赞扬与俄罗斯和中国的友谊](/articles/voa/1014143.md)
@@ -596,8 +600,4 @@
 7-2 [台北举行港反送中五周年追思会参与者：台湾人对中共威胁意识不足](/articles/voa/1014438.md)
 
 7-2 [日本成功发射旗舰火箭 将一颗地球观测卫星送入轨道](/articles/voa/1014439.md)
-
-7-2 [加州民主团体集会抗议中共党庆103周年](/articles/voa/1014440.md)
-
-7-2 [克里姆林宫对乌克兰向白俄罗斯边境增兵的报告表示关切，基辅说这是俄罗斯的信息战](/articles/voa/1014441.md)
 
