--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-13 [中国火箭军在内蒙古多波次试射 台湾警戒](/articles/voa/1014138.md)
+
 7-13 [中国启动暑期网络“清朗”行动 针对影响儿童的有害内容进行打击](/articles/voa/1014139.md)
 
 7-13 [应对中国经济胁迫 日德建立新经济安全框架](/articles/voa/1014140.md)
@@ -598,6 +600,4 @@
 7-2 [推特上的中国：交接27年后，香港已经变成了一座普通中国城市了吗？](/articles/voa/1014436.md)
 
 7-2 [美国宣布制裁被控帮助贩毒集团洗钱者，包括两名中国公民](/articles/voa/1014437.md)
-
-7-2 [台北举行港反送中五周年追思会参与者：台湾人对中共威胁意识不足](/articles/voa/1014438.md)
 
