--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-13 [三中全会农村篇: 重回集体经济的三大宿命？](/articles/voa/1014136.md)
+
+7-13 [世界媒体看中国: 微妙的中朝关系](/articles/voa/1014137.md)
+
 7-13 [中国火箭军在内蒙古多波次试射 台湾警戒](/articles/voa/1014138.md)
 
 7-13 [中国启动暑期网络“清朗”行动 针对影响儿童的有害内容进行打击](/articles/voa/1014139.md)
@@ -596,8 +600,4 @@
 7-2 [美国最高法院：特朗普在选举干预案中拥有广泛豁免权](/articles/voa/1014434.md)
 
 7-2 [在整体经济放缓的背景下，中国小型企业的工厂活动有所增加](/articles/voa/1014435.md)
-
-7-2 [推特上的中国：交接27年后，香港已经变成了一座普通中国城市了吗？](/articles/voa/1014436.md)
-
-7-2 [美国宣布制裁被控帮助贩毒集团洗钱者，包括两名中国公民](/articles/voa/1014437.md)
 
