--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-13 [以色列在加南发动大规模空袭，目标是一名哈马斯重要头目](/articles/voa/1014132.md)
+
+7-13 [世界公民法院对习近平发出逮捕令，控其犯有反人类罪和种族灭绝罪](/articles/voa/1014133.md)
+
+7-13 [专访胡佛历史学者林孝庭：蒋介石日记与国共恩仇](/articles/voa/1014134.md)
+
 7-13 [北京猛烈攻击拜登签署涉藏法案，藏人行政中央赞扬法案强化美国对藏政策](/articles/voa/1014135.md)
 
 7-13 [三中全会农村篇: 重回集体经济的三大宿命？](/articles/voa/1014136.md)
@@ -594,10 +600,4 @@
 7-2 [中东主权财富基金大幅增加对华投资 引起广泛关注](/articles/voa/1014430.md)
 
 7-2 [中国为何发布惩治台独规定？专家：因害怕国际社会逐渐以独立国家对待台湾](/articles/voa/1014431.md)
-
-7-2 [前特朗普助理班农向监狱报到并开始服刑](/articles/voa/1014432.md)
-
-7-2 [以色列要求平民撤离加沙南部的汗尤尼斯](/articles/voa/1014433.md)
-
-7-2 [美国最高法院：特朗普在选举干预案中拥有广泛豁免权](/articles/voa/1014434.md)
 
