--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-13 [朝鲜谴责称北约峰会《华盛顿宣言》“非法”](/articles/dw/1024908.md)
+
 7-13 [欧盟称X违法 马斯克曝光欧盟提供“秘密交易”](/articles/dw/1024909.md)
 
 7-13 [欧洲新一轮军备竞赛?美将在德部署远程武器](/articles/dw/1024910.md)
@@ -598,6 +600,4 @@
 6-16 [俄罗斯军舰抵达古巴参加军演](/articles/dw/1025206.md)
 
 6-16 [反修例運動五年後 香港歷經多少巨變？](/articles/dw/1025207.md)
-
-6-16 [科索沃战争结束25周年](/articles/dw/1025208.md)
 
