--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-14 [乌克兰军方：俄军前线部队24小时伤亡1000多人](/articles/voa/1014131.md)
+
 7-13 [以色列在加南发动大规模空袭，目标是一名哈马斯重要头目](/articles/voa/1014132.md)
 
 7-13 [世界公民法院对习近平发出逮捕令，控其犯有反人类罪和种族灭绝罪](/articles/voa/1014133.md)
@@ -598,6 +600,4 @@
 7-2 [美国驻欧洲各地基地准备应对可能的恐怖攻击](/articles/voa/1014429.md)
 
 7-2 [中东主权财富基金大幅增加对华投资 引起广泛关注](/articles/voa/1014430.md)
-
-7-2 [中国为何发布惩治台独规定？专家：因害怕国际社会逐渐以独立国家对待台湾](/articles/voa/1014431.md)
 
