--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-14 [俄罗斯炮击在乌克兰打死四人，乌克兰无人机攻击使俄罗斯油库起火](/articles/voa/1014129.md)
+
 7-14 [中国与几内亚比绍：战略伙伴还是“恶意接管”？](/articles/voa/1014130.md)
 
 7-14 [乌克兰军方：俄军前线部队24小时伤亡1000多人](/articles/voa/1014131.md)
@@ -598,6 +600,4 @@
 7-2 [布林肯：没有主要参与者希望以色列和真主党之间爆发战争](/articles/voa/1014427.md)
 
 7-2 [挪威阻止北极斯瓦尔巴群岛独特的地产出售 防止中国等外国的潜在收购](/articles/voa/1014428.md)
-
-7-2 [美国驻欧洲各地基地准备应对可能的恐怖攻击](/articles/voa/1014429.md)
 
