--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-14 [极昼工作室｜农村医保「催缴员」：380元的现实重量](/articles/cdt/338899.md)
+
 7-14 [维舟｜对人的尊重，怎么就那么难](/articles/cdt/338900.md)
 
 7-14 [导筒directube｜韩媒：朝鲜处决30多名观看韩剧的中学生](/articles/cdt/338902.md)
@@ -598,6 +600,4 @@
 6-4 [剑客写字的地方｜喊话让乌克兰投降，很过瘾吧？](/articles/cdt/340022.md)
 
 6-4 [六神磊磊读金庸｜苟仲文的利益](/articles/cdt/340025.md)
-
-6-5 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（四）](/articles/cdt/340026.md)
 
