--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-14 [美国前总统特朗普遇刺右耳受伤 各国领导人谴责暴力](/articles/dw/1024901.md)
+
 7-14 [研究：生成式人工智能在中国应用最广](/articles/dw/1024902.md)
 
 7-14 [“让游客回家去！”- 过度观光令欧洲热门城市居民不堪重负](/articles/dw/1024903.md)
@@ -598,6 +600,4 @@
 6-16 [中国为何对瑞士和平峰会不感兴趣？](/articles/dw/1025199.md)
 
 6-16 [以色列宣布加沙部分地区“战术性停火”](/articles/dw/1025200.md)
-
-6-16 [赖清德：不接受首战即终战的投降主义](/articles/dw/1025201.md)
 
