--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-14 [走线美国人数暴涨 他们为何急着润?](/articles/dw/1024900.md)
+
 7-14 [美国前总统特朗普遇刺右耳受伤 各国领导人谴责暴力](/articles/dw/1024901.md)
 
 7-14 [研究：生成式人工智能在中国应用最广](/articles/dw/1024902.md)
@@ -598,6 +600,4 @@
 6-16 [墙外文摘：中国邀请台湾网红去干什么？](/articles/dw/1025198.md)
 
 6-16 [中国为何对瑞士和平峰会不感兴趣？](/articles/dw/1025199.md)
-
-6-16 [以色列宣布加沙部分地区“战术性停火”](/articles/dw/1025200.md)
 
