--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-15 [美国寻找对特朗普暗杀企图的动机](/articles/voa/1014103.md)
+
+7-15 [监管恶化+经济低靡+地缘政治紧张，美国律所继续加速撤离中国](/articles/voa/1014104.md)
+
 7-15 [特朗普在刺杀图谋后呼吁美国“保持强大，坚决”](/articles/voa/1014105.md)
 
 7-15 [有关特朗普枪击案枪手的新信息浮出水面](/articles/voa/1014106.md)
@@ -596,8 +600,4 @@
 7-3 [美国会两党议员警告：中共反复用同样伎俩在各关键行业夺得主导地位 美国不能袖手旁观](/articles/voa/1014401.md)
 
 7-3 [被悬赏通缉的流亡香港活动人士饱受焦虑和恐惧之苦](/articles/voa/1014402.md)
-
-7-3 [印度北部发生人群踩踏事件，一百多人丧生](/articles/voa/1014403.md)
-
-7-3 [台湾呼吁中国立即释放在金门外海遭中国海警登检扣押的台湾渔船及船员](/articles/voa/1014404.md)
 
