--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-15 [拜登敦促国家在政治暴力之后“向后退一步”](/articles/voa/1014100.md)
+
 7-15 [三中全会开幕，看点在哪？难点何在？](/articles/voa/1014101.md)
 
 7-15 [拜登在特朗普遭遇刺杀企图后谴责政治暴力，呼吁团结](/articles/voa/1014102.md)
@@ -598,6 +600,4 @@
 7-3 [卫星图像显示中国正在古巴扩张间谍基地](/articles/voa/1014398.md)
 
 7-3 [监督组织：《苹果日报》案是香港新闻自由衰落的典型例子](/articles/voa/1014399.md)
-
-7-3 [民主党人开始公开对拜登竞选总统表达担忧](/articles/voa/1014400.md)
 
