--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-15 [在美国的动荡时刻，特朗普遇刺搅动选战](/articles/nyt/1042582.md)
+
 7-15 [中国6月贸易顺差创新高，引发多国警惕](/articles/nyt/1042583.md)
 
 7-14 [“美国受到了攻击”：还原特朗普集会遇袭现场](/articles/nyt/1042584.md)
@@ -598,6 +600,4 @@
 4-9 [台积电将获拜登政府66亿美元拨款](/articles/nyt/1042880.md)
 
 4-9 [网飞版《三体》为何在中国引发愤怒、嘲笑和怀疑](/articles/nyt/1042881.md)
-
-4-9 [“还有很多工作要做”：耶伦访华结束，未取得重大突破](/articles/nyt/1042882.md)
 
