--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-15 [分析：川普遇刺會否撼動美國大選？](/articles/dw/1024898.md)
+
 7-14 [特朗普枪击案现场都发生了什么？](/articles/dw/1024899.md)
 
 7-14 [走线美国人数暴涨 他们为何急着润?](/articles/dw/1024900.md)
@@ -598,6 +600,4 @@
 6-17 [长平观察：“美国企图刺激我们收复台湾，但我们不会上当”](/articles/dw/1025196.md)
 
 6-17 [SIPRI報告：中國核武庫擴大速度超越他國](/articles/dw/1025197.md)
-
-6-16 [墙外文摘：中国邀请台湾网红去干什么？](/articles/dw/1025198.md)
 
