--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-15 [中国第二季度经济增长不及预期](/articles/voa/1014098.md)
+
+7-15 [金与正暗示将恢复向韩国放飞“垃圾气球”](/articles/voa/1014099.md)
+
 7-15 [拜登敦促国家在政治暴力之后“向后退一步”](/articles/voa/1014100.md)
 
 7-15 [三中全会开幕，看点在哪？难点何在？](/articles/voa/1014101.md)
@@ -596,8 +600,4 @@
 7-3 [移民英国的香港人怎样看不同政党和大选？](/articles/voa/1014396.md)
 
 7-3 [美国最高法院的裁决搅乱了特朗普面临的法律诉讼](/articles/voa/1014397.md)
-
-7-3 [卫星图像显示中国正在古巴扩张间谍基地](/articles/voa/1014398.md)
-
-7-3 [监督组织：《苹果日报》案是香港新闻自由衰落的典型例子](/articles/voa/1014399.md)
 
