--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-15 [那些原本是废话的常识｜“外国”是个什么国？我从没听说过](/articles/cdt/338869.md)
+
+7-15 [声道｜特朗普遇刺后，大A股出现魔幻一幕](/articles/cdt/338871.md)
+
+7-15 [建设性意见｜别怕！我们经济增速5.0](/articles/cdt/338873.md)
+
 7-15 [亮见｜你这么长久地发声，到底是为了什么？](/articles/cdt/338876.md)
 
 7-15 [老牌恶棍｜卢克文的糟心事儿](/articles/cdt/338878.md)
@@ -594,10 +600,4 @@
 6-6 [建设性意见｜中国网民对国际关系的常见误解](/articles/cdt/339893.md)
 
 6-7 [【404文库】胡锡进：靖国神社可恨，但去那里撒尿就应该赞吗？](/articles/cdt/339898.md)
-
-6-6 [【CDT报告汇·六四35周年】历史的记忆作为反抗的武器——亲历者王超华、何晓清、林培瑞和萧强谈自己的“六四”](/articles/cdt/339902.md)
-
-6-5 [知鸦读书｜马国川：我们该如何看待，发生在眼前的社会大事？](/articles/cdt/339916.md)
-
-6-5 [歪脑｜35年了 不同世代的“六四”纪念 —— 以个体的坚韧 对抗政治高压与时光无情](/articles/cdt/339948.md)
 
