--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,18 @@
 德国之声
 ------
 
+7-15 [中国请求WTO设专家组解决与美国贸易争端](/articles/dw/1024890.md)
+
+7-15 [特朗普遇袭可能引发政治暴力不断升级](/articles/dw/1024891.md)
+
+7-15 [社媒上热搜 官媒低调处理——特朗普遇刺在中国的反应](/articles/dw/1024892.md)
+
+7-15 [过度观光：带来财富 也带来问题](/articles/dw/1024893.md)
+
+7-15 [巴伐利亚传统烤猪肘的正确打开方式](/articles/dw/1024894.md)
+
+7-15 [中共三中全会开幕  经济数据缺乏动能](/articles/dw/1024895.md)
+
 7-15 [事实核查：特朗普遇刺未遂，枪手到底是谁？](/articles/dw/1024896.md)
 
 7-15 [阿富汗女性：对抗塔利班不能只靠外援](/articles/dw/1024897.md)
@@ -588,16 +600,4 @@
 6-17 [美记者在俄被控间谍罪将受审 美俄接触谈判换囚](/articles/dw/1025188.md)
 
 6-17 [中国宣布对欧盟进口猪肉发起反倾销调查](/articles/dw/1025189.md)
-
-6-17 [瑞士乌克兰和平会议有哪些成果？](/articles/dw/1025190.md)
-
-6-17 [客座评论：从“微妙抵抗”到两大阵营的对抗](/articles/dw/1025191.md)
-
-6-17 [调查：在华德国企业担忧价格压力](/articles/dw/1025192.md)
-
-6-17 [南中国海：菲律宾补给船和中国海警船发生擦碰](/articles/dw/1025193.md)
-
-6-17 [中澳總理會晤談及楊恆均案 成蕾稱遭中方阻擋](/articles/dw/1025194.md)
-
-6-17 [2024年欧洲杯的吉祥物叫Albärt](/articles/dw/1025195.md)
 
