--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-15 [对俄罗斯持强烈批评态度的卡娅·卡拉斯辞去爱沙尼亚总理职务，接任欧盟首席外交官](/articles/voa/1014090.md)
+
 7-15 [中国6月新建房屋价格下跌幅度创9年新高，市场期待更多支撑政策](/articles/voa/1014091.md)
 
 7-15 [不满美国新能源汽车补贴等措施，中国要求世贸设立专家组解决相关争议](/articles/voa/1014092.md)
@@ -598,6 +600,4 @@
 7-3 [香港主权移交27周年 民调指过半港人对前途无信心 免于恐惧自由评分大跌](/articles/voa/1014388.md)
 
 7-3 [希音是美国公司还是中国公司？](/articles/voa/1014389.md)
-
-7-3 [国安新规生效，入境中国恐遭查验手机电脑](/articles/voa/1014390.md)
 
