--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-16 [从地下室到战场：乌克兰初创公司制造低成本机器人对抗俄罗斯](/articles/voa/1014078.md)
+
+7-16 [特朗普宣布选择万斯参议员为副总统竞选伙伴](/articles/voa/1014079.md)
+
+7-16 [中国官媒借特朗普遭枪击事件再度攻击美国民主制度](/articles/voa/1014080.md)
+
 7-16 [巴基斯坦寻求禁止前总理汗的政党](/articles/voa/1014081.md)
 
 7-16 [阿根廷联邦法院下令对中国当局涉嫌虐待维吾尔人展开调查](/articles/voa/1014082.md)
@@ -594,10 +600,4 @@
 7-4 [美国向乌克兰提供急需的防空导弹](/articles/voa/1014376.md)
 
 7-4 [VOA专访美国务院官员:北约峰会将公布乌克兰入盟具体步骤](/articles/voa/1014377.md)
-
-7-4 [希音转投伦敦，中国公司还愿意在美国上市吗？](/articles/voa/1014378.md)
-
-7-4 [台海紧张局势不断加剧，专家吁华盛顿鼓励北京与台北建立秘密沟通渠道](/articles/voa/1014379.md)
-
-7-4 [NASA：“百年不遇”的新星爆发随时可能到来](/articles/voa/1014380.md)
 
