--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,20 @@
 美国之音
 ------
 
+7-16 [国土安全部长：特朗普集会现场安保是一次“失败”](/articles/voa/1014069.md)
+
+7-16 [也门胡塞反叛武装涉嫌两次攻击红海船只](/articles/voa/1014070.md)
+
+7-16 [特朗普的副手万斯或有助于他吸引“铁锈带”选民](/articles/voa/1014071.md)
+
+7-16 [台湾跨党派代表团参加RNC：力挺美国民主并聚焦美台关系](/articles/voa/1014072.md)
+
+7-16 [视中国为更大威胁，支持对华关税：有关特朗普竞选搭档万斯的几件事](/articles/voa/1014073.md)
+
+7-16 [蒲黄榆说: 三中全会观察—中共高层的集体躺平](/articles/voa/1014074.md)
+
+7-16 [欧盟对五名以色列个人和三个实体实施制裁](/articles/voa/1014075.md)
+
 7-16 [盟友说，匈牙利的欧尔班向欧盟领导人通报了他与普京和习近平的会晤](/articles/voa/1014076.md)
 
 7-16 [美联邦法官驳回特朗普机密文件案](/articles/voa/1014077.md)
@@ -586,18 +600,4 @@
 7-4 [欧盟开始对进口中国电动车加征关税](/articles/voa/1014367.md)
 
 7-4 [北京以死刑威胁“台独”触发在华外企考虑将台湾员工撤离大陆](/articles/voa/1014368.md)
-
-7-4 [中国比亚迪在泰国开设东南亚首座电动车厂](/articles/voa/1014369.md)
-
-7-4 [英国大选开跑 工党预计将取得历史性胜利](/articles/voa/1014370.md)
-
-7-4 [中国海警扣押违规台湾渔船 台湾国安局称将分析是否藉此认知作战](/articles/voa/1014371.md)
-
-7-4 [中国在美军基地周边购地引发安全担忧, 美国应如何有效应对？](/articles/voa/1014372.md)
-
-7-4 [菲律宾军方称 美国中程导弹系统将撤出吕宋岛](/articles/voa/1014373.md)
-
-7-4 [拜登誓言继续2024竞选，拒绝退选压力](/articles/voa/1014374.md)
-
-7-4 [习近平和普京在上合峰会期间再会晤 誓言中俄续加强战略合作](/articles/voa/1014375.md)
 
