--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-16 [聚焦中共三中全会：习近平能重新赢得民众和投资者信心吗](/articles/nyt/1042578.md)
+
 7-15 [愤恨、怀疑和指责：特朗普遇刺事件或进一步撕裂美国](/articles/nyt/1042579.md)
 
 7-15 [中国第二季度经济增速放缓，消费支出持续疲软](/articles/nyt/1042580.md)
@@ -598,6 +600,4 @@
 4-10 [韩国国会选举：尹锡悦与李在明的“角斗士”之战](/articles/nyt/1042876.md)
 
 4-10 [台积电工厂带来的繁荣与挑战：日本如何重塑其芯片产业](/articles/nyt/1042877.md)
-
-4-10 [习近平会见俄罗斯外长，继续深化中俄关系](/articles/nyt/1042878.md)
 
