--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-16 [遇袭后首次露面 特朗普右耳缠绷带现身共和党大会](/articles/voa/1014065.md)
+
 7-16 [国会要求特勤局对枪击特朗普事件作出解释](/articles/voa/1014066.md)
 
 7-16 [中共三中全会欲提振经济 但体制不公已让社会火山发出“汩汩作响的气泡”](/articles/voa/1014067.md)
@@ -598,6 +600,4 @@
 7-4 [中国多数地区预测七月将遇超长热害，极端天气威胁粮食生产](/articles/voa/1014363.md)
 
 7-4 [中印外长在阿斯塔纳会晤，双方同意加快谈判解决边界问题](/articles/voa/1014364.md)
-
-7-4 [中国“杀猪盘”魔爪伸向全球，警醒之后的美国打击力度仍远远不够](/articles/voa/1014365.md)
 
