--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-16 [特朗普为何选择昔日“反特先锋”万斯做竞选搭档](/articles/nyt/1042574.md)
+
 7-16 [特朗普遇刺引发对美国特勤局失职的质疑](/articles/nyt/1042575.md)
 
 7-16 [关于特朗普竞选搭档J·D·万斯，你需要了解的六件事](/articles/nyt/1042576.md)
@@ -598,6 +600,4 @@
 4-11 [无国界记者组织成员在香港机场被扣留并驱逐](/articles/nyt/1042872.md)
 
 4-11 [网易与暴雪“复合”，《魔兽世界》等游戏将重回中国市场](/articles/nyt/1042873.md)
-
-4-11 [习近平为何在北京会见马英九](/articles/nyt/1042874.md)
 
