--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+7-16 [将特朗普置于“靶心”？枪击案后拜登承认用词有误](/articles/dw/1024877.md)
+
+7-16 [特朗普若当选 中国将成为“最大敌人”？](/articles/dw/1024878.md)
+
+7-16 [欧委会部分抵制匈牙利任欧盟轮值主席国 欧尔班质疑欧盟路线](/articles/dw/1024879.md)
+
+7-16 [长平观察：“吃进去有毒，说出来有罪”](/articles/dw/1024880.md)
+
+7-16 [美国联邦法官驳回特朗普机密文件案](/articles/dw/1024881.md)
+
 7-16 [媒体：俄分享对付美国武器经验给中国？美国会担忧](/articles/dw/1024882.md)
 
 7-16 [客座评论：给习近平“戴高帽子”能成功吗？](/articles/dw/1024883.md)
@@ -590,14 +600,4 @@
 6-18 [客座评论：普京访问朝鲜 中国会“吃醋”吗？](/articles/dw/1025175.md)
 
 6-18 [奢侈品牌光鲜的背后 中资代工厂涉嫌剥削劳工](/articles/dw/1025176.md)
-
-6-18 [为何金正恩如此热切欢迎普京来访？](/articles/dw/1025177.md)
-
-6-18 [欧中贸易摩擦继续 中国为何选择猪肉产品来报复？](/articles/dw/1025178.md)
-
-6-18 [如何对抗热浪？ 高科技帮助你](/articles/dw/1025179.md)
-
-6-18 [中国高管被曝巨额受贿 阿迪达斯股价震荡](/articles/dw/1025180.md)
-
-6-18 [马蒂亚斯的轮椅学校](/articles/dw/1025181.md)
 
