--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-16 [在特朗普提名大会上的德国议员：美国仍是欧洲的安全保障](/articles/dw/1024876.md)
+
 7-16 [将特朗普置于“靶心”？枪击案后拜登承认用词有误](/articles/dw/1024877.md)
 
 7-16 [特朗普若当选 中国将成为“最大敌人”？](/articles/dw/1024878.md)
@@ -598,6 +600,4 @@
 6-18 [美国国会议员代表团访问达兰萨拉](/articles/dw/1025174.md)
 
 6-18 [客座评论：普京访问朝鲜 中国会“吃醋”吗？](/articles/dw/1025175.md)
-
-6-18 [奢侈品牌光鲜的背后 中资代工厂涉嫌剥削劳工](/articles/dw/1025176.md)
 
