--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-16 [菲律宾和中国同意设立两国元首热线，防止冲突失控](/articles/voa/1014056.md)
+
+7-16 [中国斡旋哈马斯和法塔赫谈判 促使双方实现和解团结](/articles/voa/1014057.md)
+
 7-16 [改西藏英译名Xizang，学者:国际仍沿用Tibet 洗脑成效不彰](/articles/voa/1014058.md)
 
 7-16 [特朗普凯旋亮相后 共和党大会第二天将聚焦移民问题](/articles/voa/1014059.md)
@@ -596,8 +600,4 @@
 7-5 [民兵组织袭击刚果金矿，打死六名中国矿工和两名刚果军人](/articles/voa/1014354.md)
 
 7-5 [真主党发动火箭袭击后，以色列打击黎巴嫩南部](/articles/voa/1014355.md)
-
-7-5 [美国迎来第248个独立日](/articles/voa/1014356.md)
-
-7-5 [日菲将召开2+2会议 能有效遏制中国海上扩张吗？](/articles/voa/1014357.md)
 
